--- a/Jsons/language/es.json
+++ b/Jsons/language/es.json
@@ -83,35 +83,6 @@
   "source_wikipedia": "Wikipedia",
   "source_grokipedia": "Grokipedia",
   "source_worldhistory": "Historia mundial",
-  "cal_name": "Calendario:",
-  "cal_availability_yes": "Disponible",
-  "cal_availability_no": "Aún no estamos listos (necesitamos ayuda... contribución-sitio-web-aquí)",
-  "cal_other": "Calendarios",
-  "cal_usage": "Uso:",
-  "cal_gregorian": "gregoriano",
-  "cal_islamic": "Islámico (Hijri)",
-  "cal_chinese": "Chino",
-  "cal_persian": "Persa (Hégira Solar)",
-  "cal_ethiopian": "etíope",
-  "cal_hebrew": "hebreo",
-  "cal_balinese": "balinés",
-  "cal_creationist": "Creacionista",
-  "cal_gregorian_explanation": "Calendario solar, 12 meses, 365-366 días, introducido por el Papa Gregorio XIII en 1582.",
-  "cal_islamic_explanation": "El calendario lunar, de 12 meses y 354-355 días, comienza con la migración de Mahoma a Medina (622 d.C.).",
-  "cal_chinese_explanation": "Calendario lunisolar que combina los meses lunares, el año solar y el ciclo animal del zodíaco de 12 años. Se utiliza para festivales tradicionales del este asiático.",
-  "cal_persian_explanation": "El calendario solar, de 365-366 días, comienza en el equinoccio de primavera (Nowruz).",
-  "cal_balinese_explanation": "Sistema de calendario que combina ciclos simultáneos, incluyendo un calendario Pawukon de 210 días. Se utiliza para ceremonias religiosas.",
-  "cal_hebrew_explanation": "Calendario lunisolar, de 12 a 13 meses, que comienza desde la creación (3761 a. C.). Se utiliza para celebraciones religiosas.",
-  "cal_ethiopian_explanation": "Calendario solar, 13 meses (12 de 30 días y 1 de 5-6 días), 7-8 años detrás del calendario gregoriano.",
-  "cal_creationist_explanation": "Marco cronológico, calcula la edad de la Tierra a partir de genealogías bíblicas, ubicando la creación hace 6.000-10.000 años.",
-  "cal_gregorian_usage": "Uso: 95% (oficial) - Se utiliza como calendario civil en casi todos los países para fines oficiales y económicos.",
-  "cal_islamic_usage": "Uso: 24% (religioso) - Observado por ~2 mil millones de musulmanes (~24% del mundo), principalmente para festividades religiosas (Ramadán, Hajj, etc.).",
-  "cal_chinese_usage": "Uso: 18% (cultural) - Observado por aproximadamente 1.400 millones de chinos en festivales como el Año Nuevo Lunar.",
-  "cal_persian_usage": "Uso: 1,5% (civil/cultural) - Calendario oficial en Irán (~89M) y Afganistán (~41M).",
-  "cal_balinese_usage": "Uso: 1,5% (civil) - Oficial en Etiopía (~126M) y utilizado en Eritrea.",
-  "cal_hebrew_usage": "Uso: 0,2 % (religioso) - Utilizado por comunidades judías (~16 millones de personas) con fines religiosos.",
-  "cal_ethiopian_usage": "Uso: <0,1 % (cultural) - Se utiliza principalmente en Bali (Indonesia), unos 4,5 millones de personas.",
-  "cal_creationist_usage": "Uso: <0,01% (nicho) - Utilizado por algunas comunidades cristianas fundamentalistas.",
   "tv_universe": "Universo",
   "tv_life": "Vida",
   "tv_dinosaurs": "Dinosaurios",
@@ -339,6 +310,35 @@
   "time_region_week_starts": "Semana",
   "time_region_week_starts_monday": "Lunes",
   "time_region_week_starts_sunday": "Domingo",
+  "cal_name": "Calendario:",
+  "cal_availability_yes": "Disponible",
+  "cal_availability_no": "Aún no estamos listos (necesitamos ayuda... contribución-sitio-web-aquí)",
+  "cal_other": "Calendarios",
+  "cal_usage": "Uso:",
+  "cal_gregorian": "gregoriano",
+  "cal_islamic": "Islámico (Hijri)",
+  "cal_chinese": "Chino",
+  "cal_persian": "Persa (Hégira Solar)",
+  "cal_ethiopian": "etíope",
+  "cal_hebrew": "hebreo",
+  "cal_balinese": "balinés",
+  "cal_creationist": "Creacionista",
+  "cal_gregorian_explanation": "Calendario solar, 12 meses, 365-366 días, introducido por el Papa Gregorio XIII en 1582.",
+  "cal_islamic_explanation": "Calendario lunar, 12 meses, 354-355 días, comienza con la migración de Mahoma a Medina (622 d.C.).",
+  "cal_chinese_explanation": "Calendario lunisolar que combina los meses lunares, el año solar y el ciclo animal del zodíaco de 12 años. Se utiliza para festivales tradicionales del este asiático.",
+  "cal_persian_explanation": "El calendario solar, de 365-366 días, comienza en el equinoccio de primavera (Nowruz).",
+  "cal_balinese_explanation": "Sistema de calendario que combina ciclos simultáneos, incluyendo un calendario Pawukon de 210 días. Se utiliza para ceremonias religiosas.",
+  "cal_hebrew_explanation": "Calendario lunisolar, de 12 a 13 meses, que comienza desde la creación (3761 a. C.). Se utiliza para celebraciones religiosas.",
+  "cal_ethiopian_explanation": "Calendario solar, 13 meses (12 de 30 días y 1 de 5-6 días), 7-8 años detrás del calendario gregoriano.",
+  "cal_creationist_explanation": "Marco cronológico, calcula la edad de la Tierra a partir de genealogías bíblicas, ubicando la creación hace 6.000-10.000 años.",
+  "cal_gregorian_usage": "Uso: 95% (oficial) - Se utiliza como calendario civil en casi todos los países para fines oficiales y económicos.",
+  "cal_islamic_usage": "Uso: 24% (religioso) - Observado por ~2 mil millones de musulmanes (~24% del mundo), principalmente para festividades religiosas (Ramadán, Hajj, etc.).",
+  "cal_chinese_usage": "Uso: 18% (cultural) - Observado por aproximadamente 1.400 millones de chinos en festivales como el Año Nuevo Lunar.",
+  "cal_persian_usage": "Uso: 1,5% (civil/cultural) - Calendario oficial en Irán (~89M) y Afganistán (~41M).",
+  "cal_balinese_usage": "Uso: 1,5% (civil) - Oficial en Etiopía (~126M) y utilizado en Eritrea.",
+  "cal_hebrew_usage": "Uso: 0,2 % (religioso) - Utilizado por comunidades judías (~16 millones de personas) con fines religiosos.",
+  "cal_ethiopian_usage": "Uso: <0,1 % (cultural) - Se utiliza principalmente en Bali (Indonesia), unos 4,5 millones de personas.",
+  "cal_creationist_usage": "Uso: <0,01% (nicho) - Utilizado por algunas comunidades cristianas fundamentalistas.",
   "settings_source_academy": "Academia",
   "settings_parameters": "Parámetros",
   "controls_mouse": "Ratón",
@@ -346,22 +346,21 @@
   "controls_mouse_drag_pan": "Línea de tiempo de Pan",
   "controls_mouse_wheel": "Rueda",
   "controls_mouse_wheel_zoom_at_cursor": "Zoom en el cursor",
-  "controls_mouse_pan_sensitivity": "Sensibilidad panorámica",
   "controls_mouse_enable_inertia": "Impulso después del arrastre",
   "controls_keyboard": "Teclado",
-  "controls_keyboard_pan_left_right": "Panorámica hacia la izquierda/derecha",
+  "controls_keyboard_pan_left_right": "Cacerola",
   "controls_keyboard_key_shift": "Cambio",
-  "controls_keyboard_fast_pan": "Panorámica rápida (5x)",
-  "controls_keyboard_zoom_in_out": "Acercar/alejar",
+  "controls_keyboard_fast_pan": "Panorámica rápida",
+  "controls_keyboard_zoom_in_out": "Zoom",
   "controls_keyboard_key_home": "Hogar",
-  "controls_keyboard_jump_to_present": "Saltar al presente",
+  "controls_keyboard_jump_to_present": "Saltar al ahora",
   "controls_keyboard_reset_zoom": "Restablecer zoom",
-  "controls_keyboard_invert_arrows": "Invertir teclas de flecha",
+  "controls_keyboard_invert_arrows": "Invertir sartén",
   "controls_touch": "Tocar",
   "controls_touch_drag": "Arrastrar",
   "controls_touch_drag_pan": "Cacerola",
   "controls_touch_pinch": "Pellizco",
   "controls_touch_pinch_zoom": "Acercar/alejar",
-  "controls_touch_zoom_sensitivity": "Sensibilidad al pellizco",
+  "controls_touch_zoom_sensitivity": "Pellizco",
   "controls_touch_enable_pinch_zoom": "Habilitar pellizcar para hacer zoom"
 }
