--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -83,35 +83,6 @@
   "source_wikipedia": "Wikipedia",
   "source_grokipedia": "Grokipedia",
   "source_worldhistory": "World History",
-  "cal_name": "Calendrier:",
-  "cal_availability_yes": "Disponible",
-  "cal_availability_no": "Pas encore prêt (nous avons besoin d'aide... site web de contribution ici)",
-  "cal_other": "Calendriers",
-  "cal_usage": "Usage:",
-  "cal_gregorian": "grégorien",
-  "cal_islamic": "Islamique (Hégire)",
-  "cal_chinese": "Chinois",
-  "cal_persian": "Persan (Hégire solaire)",
-  "cal_ethiopian": "éthiopien",
-  "cal_hebrew": "hébreu",
-  "cal_balinese": "Balinais",
-  "cal_creationist": "créationniste",
-  "cal_gregorian_explanation": "Calendrier solaire, 12 mois, 365-366 jours, introduit par le pape Grégoire XIII en 1582.",
-  "cal_islamic_explanation": "Calendrier lunaire, 12 mois, 354-355 jours, commence avec la migration de Mahomet à Médine (622 CE).",
-  "cal_chinese_explanation": "Calendrier luni-solaire, combinant les mois lunaires, l'année solaire et le cycle zodiacal de 12 ans. Utilisé pour les fêtes traditionnelles d'Asie de l'Est.",
-  "cal_persian_explanation": "Le calendrier solaire, de 365 à 366 jours, commence à l'équinoxe de printemps (Nowruz).",
-  "cal_balinese_explanation": "Système calendaire combinant des cycles simultanés, incluant un calendrier Pawukon de 210 jours. Utilisé pour les cérémonies religieuses.",
-  "cal_hebrew_explanation": "Calendrier luni-solaire, de 12 à 13 mois, débutant avec la création (3761 av. J.-C.). Utilisé pour les pratiques religieuses.",
-  "cal_ethiopian_explanation": "Calendrier solaire, 13 mois (12 de 30 jours et 1 de 5-6 jours), 7-8 ans en retard sur le calendrier grégorien.",
-  "cal_creationist_explanation": "Ce cadre chronologique calcule l'âge de la Terre à partir des généalogies bibliques, situant la création il y a 6 000 à 10 000 ans.",
-  "cal_gregorian_usage": "Utilisation : 95 % (officiel) - Utilisé comme calendrier civil dans presque tous les pays à des fins officielles et économiques.",
-  "cal_islamic_usage": "Usage : 24 % (religieux) - Observé par environ 2 milliards de musulmans (environ 24 % de la population mondiale), principalement pour les fêtes religieuses (Ramadan, Hajj, etc.).",
-  "cal_chinese_usage": "Usage : 18 % (culturel) - Observé par environ 1,4 milliard de Chinois lors de fêtes comme le Nouvel An lunaire.",
-  "cal_persian_usage": "Utilisation : 1,5 % (civil/culturel) - Calendrier officiel en Iran (~89 millions) et en Afghanistan (~41 millions).",
-  "cal_balinese_usage": "Utilisation : 1,5 % (civil) - Officiel en Éthiopie (~126 millions) et utilisé en Érythrée.",
-  "cal_hebrew_usage": "Utilisation : 0,2 % (religieux) - Utilisé par les communautés juives (~16 millions de personnes) à des fins religieuses.",
-  "cal_ethiopian_usage": "Usage : <0,1 % (culturel) - Principalement utilisé à Bali (Indonésie), par environ 4,5 millions de personnes.",
-  "cal_creationist_usage": "Utilisation : <0,01 % (niche) - Utilisé par quelques communautés chrétiennes fondamentalistes.",
   "tv_universe": "Univers",
   "tv_life": "Vie",
   "tv_dinosaurs": "Dinosaures",
@@ -339,6 +310,35 @@
   "time_region_week_starts": "Semaine",
   "time_region_week_starts_monday": "Lundi",
   "time_region_week_starts_sunday": "Dimanche",
+  "cal_name": "Calendrier:",
+  "cal_availability_yes": "Disponible",
+  "cal_availability_no": "Pas encore prêt (nous avons besoin d'aide... site web de contribution ici)",
+  "cal_other": "Calendriers",
+  "cal_usage": "Usage:",
+  "cal_gregorian": "grégorien",
+  "cal_islamic": "Islamique (Hégire)",
+  "cal_chinese": "Chinois",
+  "cal_persian": "Persan (Hégire solaire)",
+  "cal_ethiopian": "éthiopien",
+  "cal_hebrew": "hébreu",
+  "cal_balinese": "Balinais",
+  "cal_creationist": "créationniste",
+  "cal_gregorian_explanation": "Calendrier solaire, 12 mois, 365-366 jours, introduit par le pape Grégoire XIII en 1582.",
+  "cal_islamic_explanation": "Calendrier lunaire, 12 mois, 354-355 jours, commence avec la migration de Mahomet à Médine (622 CE).",
+  "cal_chinese_explanation": "Calendrier luni-solaire, combinant les mois lunaires, l'année solaire et le cycle zodiacal de 12 ans. Utilisé pour les fêtes traditionnelles d'Asie de l'Est.",
+  "cal_persian_explanation": "Le calendrier solaire, de 365 à 366 jours, commence à l'équinoxe de printemps (Nowruz).",
+  "cal_balinese_explanation": "Système calendaire combinant des cycles simultanés, incluant un calendrier Pawukon de 210 jours. Utilisé pour les cérémonies religieuses.",
+  "cal_hebrew_explanation": "Calendrier luni-solaire, de 12 à 13 mois, débutant avec la création (3761 av. J.-C.). Utilisé pour les observances religieuses.",
+  "cal_ethiopian_explanation": "Calendrier solaire, 13 mois (12 de 30 jours et 1 de 5-6 jours), 7-8 ans en retard sur le calendrier grégorien.",
+  "cal_creationist_explanation": "Ce cadre chronologique calcule l'âge de la Terre à partir des généalogies bibliques, situant la création il y a 6 000 à 10 000 ans.",
+  "cal_gregorian_usage": "Utilisation : 95 % (officiel) - Utilisé comme calendrier civil dans presque tous les pays à des fins officielles et économiques.",
+  "cal_islamic_usage": "Usage : 24 % (religieux) - Observé par environ 2 milliards de musulmans (environ 24 % de la population mondiale), principalement pour les fêtes religieuses (Ramadan, Hajj, etc.).",
+  "cal_chinese_usage": "Usage : 18 % (culturel) - Observé par environ 1,4 milliard de Chinois lors de fêtes comme le Nouvel An lunaire.",
+  "cal_persian_usage": "Utilisation : 1,5 % (civil/culturel) - Calendrier officiel en Iran (~89 millions) et en Afghanistan (~41 millions).",
+  "cal_balinese_usage": "Utilisation : 1,5 % (civil) - Officiel en Éthiopie (~126 millions) et utilisé en Érythrée.",
+  "cal_hebrew_usage": "Utilisation : 0,2 % (religieux) - Utilisé par les communautés juives (~16 millions de personnes) à des fins religieuses.",
+  "cal_ethiopian_usage": "Usage : <0,1 % (culturel) - Principalement utilisé à Bali (Indonésie), environ 4,5 millions de personnes.",
+  "cal_creationist_usage": "Utilisation : <0,01 % (niche) - Utilisé par quelques communautés chrétiennes fondamentalistes.",
   "settings_source_academy": "Académie",
   "settings_parameters": "Paramètres",
   "controls_mouse": "Souris",
@@ -346,22 +346,21 @@
   "controls_mouse_drag_pan": "Chronologie panoramique",
   "controls_mouse_wheel": "Roue",
   "controls_mouse_wheel_zoom_at_cursor": "Zoomer au niveau du curseur",
-  "controls_mouse_pan_sensitivity": "Sensibilité pan",
   "controls_mouse_enable_inertia": "L'élan après la traînée",
   "controls_keyboard": "Clavier",
-  "controls_keyboard_pan_left_right": "Déplacer vers la gauche/droite",
+  "controls_keyboard_pan_left_right": "Poêle",
   "controls_keyboard_key_shift": "Changement",
-  "controls_keyboard_fast_pan": "Poêle rapide (5x)",
-  "controls_keyboard_zoom_in_out": "Zoom avant/arrière",
+  "controls_keyboard_fast_pan": "poêle rapide",
+  "controls_keyboard_zoom_in_out": "Zoom",
   "controls_keyboard_key_home": "Maison",
-  "controls_keyboard_jump_to_present": "Aller au présent",
+  "controls_keyboard_jump_to_present": "Passer à maintenant",
   "controls_keyboard_reset_zoom": "Réinitialiser le zoom",
-  "controls_keyboard_invert_arrows": "Inverser les touches fléchées",
+  "controls_keyboard_invert_arrows": "Inverser la poêle",
   "controls_touch": "Touche",
   "controls_touch_drag": "Traîner",
   "controls_touch_drag_pan": "Poêle",
   "controls_touch_pinch": "Pincer",
   "controls_touch_pinch_zoom": "Zoom avant/arrière",
-  "controls_touch_zoom_sensitivity": "Sensibilité au pincement",
+  "controls_touch_zoom_sensitivity": "Pincer",
   "controls_touch_enable_pinch_zoom": "Activer le zoom par pincement"
 }
