--- a/Jsons/language/hi.json
+++ b/Jsons/language/hi.json
@@ -83,35 +83,6 @@
   "source_wikipedia": "विकिपीडिया",
   "source_grokipedia": "ग्रोकिपीडिया",
   "source_worldhistory": "दुनिया के इतिहास",
-  "cal_name": "कैलेंडर:",
-  "cal_availability_yes": "उपलब्ध",
-  "cal_availability_no": "अभी तैयार नहीं है (हमें मदद की ज़रूरत है... योगदान वेबसाइट यहाँ देखें)",
-  "cal_other": "CALENDARS",
-  "cal_usage": "उपयोग:",
-  "cal_gregorian": "ग्रेगोरियन",
-  "cal_islamic": "इस्लामी (हिजरी)",
-  "cal_chinese": "चीनी",
-  "cal_persian": "फ़ारसी (सूर्य हिजरी)",
-  "cal_ethiopian": "इथियोपियाई",
-  "cal_hebrew": "यहूदी",
-  "cal_balinese": "बाली",
-  "cal_creationist": "निर्माणवादी",
-  "cal_gregorian_explanation": "सौर कैलेंडर, जिसमें 12 महीने और 365-366 दिन होते हैं, को पोप ग्रेगरी XIII ने 1582 में शुरू किया था।",
-  "cal_islamic_explanation": "चंद्र कैलेंडर, जिसमें 12 महीने और 354-355 दिन होते हैं, की शुरुआत मुहम्मद के मदीना प्रवास (622 ईस्वी) से होती है।",
-  "cal_chinese_explanation": "चंद्र-सौर कैलेंडर, चंद्र महीनों, सौर वर्ष और 12 वर्षीय राशि चक्र पशु चक्र का संयोजन है। इसका उपयोग पारंपरिक पूर्वी एशियाई त्योहारों में किया जाता है।",
-  "cal_persian_explanation": "सौर कैलेंडर, जिसमें 365-366 दिन होते हैं, वसंत विषुव (नवरोज) से शुरू होता है।",
-  "cal_balinese_explanation": "एक साथ कई चक्रों को संयोजित करने वाली कैलेंडर प्रणाली, जिसमें 210 दिनों का पावुकॉन कैलेंडर भी शामिल है। इसका उपयोग धार्मिक अनुष्ठानों के लिए किया जाता है।",
-  "cal_hebrew_explanation": "चंद्र-सौर कैलेंडर, 12-13 महीने, सृष्टि की उत्पत्ति (3761 ईसा पूर्व) से शुरू होता है। इसका उपयोग धार्मिक अनुष्ठानों के लिए किया जाता है।",
-  "cal_ethiopian_explanation": "सौर कैलेंडर, 13 महीने (12 महीने 30 दिनों के और 1 महीना 5-6 दिनों का), ग्रेगोरियन कैलेंडर से 7-8 साल पीछे।",
-  "cal_creationist_explanation": "कालानुक्रमिक ढांचा, बाइबिल की वंशावलियों से पृथ्वी की आयु की गणना करता है, जिसके अनुसार सृष्टि की रचना 6,000-10,000 वर्ष पूर्व हुई थी।",
-  "cal_gregorian_usage": "उपयोग: 95% (आधिकारिक) - लगभग हर देश में आधिकारिक और आर्थिक उद्देश्यों के लिए नागरिक कैलेंडर के रूप में उपयोग किया जाता है।",
-  "cal_islamic_usage": "उपयोग: 24% (धार्मिक) - लगभग 2 अरब मुसलमानों (दुनिया के लगभग 24%) द्वारा मनाया जाता है, मुख्य रूप से धार्मिक त्योहारों (रमजान, हज आदि) के लिए।",
-  "cal_chinese_usage": "उपयोग: 18% (सांस्कृतिक) - चंद्र नव वर्ष जैसे त्योहारों के लिए लगभग 1.4 अरब चीनी लोगों द्वारा मनाया जाता है।",
-  "cal_persian_usage": "उपयोग: 1.5% (नागरिक/सांस्कृतिक) - ईरान (~89 मिलियन) और अफगानिस्तान (~41 मिलियन) में आधिकारिक कैलेंडर।",
-  "cal_balinese_usage": "उपयोग: 1.5% (नागरिक) - इथियोपिया में आधिकारिक (~126 मिलियन) और इरिट्रिया में उपयोग किया जाता है।",
-  "cal_hebrew_usage": "उपयोग: 0.2% (धार्मिक) - यहूदी समुदायों (~16 मिलियन लोग) द्वारा धार्मिक उद्देश्यों के लिए उपयोग किया जाता है।",
-  "cal_ethiopian_usage": "उपयोग: <0.1% (सांस्कृतिक) - मुख्य रूप से बाली (इंडोनेशिया) में उपयोग किया जाता है, लगभग 4.5 मिलियन लोग।",
-  "cal_creationist_usage": "उपयोग: <0.01% (विशिष्ट) - कुछ कट्टरपंथी ईसाई समुदायों द्वारा उपयोग किया जाता है।",
   "tv_universe": "ब्रह्मांड",
   "tv_life": "ज़िंदगी",
   "tv_dinosaurs": "डायनासोर",
@@ -339,6 +310,35 @@
   "time_region_week_starts": "सप्ताह",
   "time_region_week_starts_monday": "सोमवार",
   "time_region_week_starts_sunday": "रविवार",
+  "cal_name": "कैलेंडर:",
+  "cal_availability_yes": "उपलब्ध",
+  "cal_availability_no": "अभी तैयार नहीं है (हमें मदद की ज़रूरत है... योगदान वेबसाइट यहाँ देखें)",
+  "cal_other": "CALENDARS",
+  "cal_usage": "उपयोग:",
+  "cal_gregorian": "ग्रेगोरियन",
+  "cal_islamic": "इस्लामी (हिजरी)",
+  "cal_chinese": "चीनी",
+  "cal_persian": "फ़ारसी (सूर्य हिजरी)",
+  "cal_ethiopian": "इथियोपियाई",
+  "cal_hebrew": "यहूदी",
+  "cal_balinese": "बाली",
+  "cal_creationist": "निर्माणवादी",
+  "cal_gregorian_explanation": "सौर कैलेंडर, जिसमें 12 महीने और 365-366 दिन होते हैं, को पोप ग्रेगरी XIII ने 1582 में शुरू किया था।",
+  "cal_islamic_explanation": "चंद्र कैलेंडर, जिसमें 12 महीने और 354-355 दिन होते हैं, की शुरुआत मुहम्मद के मदीना प्रवास (622 ईस्वी) से होती है।",
+  "cal_chinese_explanation": "चंद्र-सौर कैलेंडर, चंद्र महीनों, सौर वर्ष और 12 वर्षीय राशि चक्र पशु चक्र का संयोजन है। इसका उपयोग पारंपरिक पूर्वी एशियाई त्योहारों में किया जाता है।",
+  "cal_persian_explanation": "सौर कैलेंडर, जिसमें 365-366 दिन होते हैं, वसंत विषुव (नवरोज) से शुरू होता है।",
+  "cal_balinese_explanation": "एक साथ कई चक्रों को संयोजित करने वाली कैलेंडर प्रणाली, जिसमें 210 दिनों का पावुकॉन कैलेंडर भी शामिल है। इसका उपयोग धार्मिक अनुष्ठानों के लिए किया जाता है।",
+  "cal_hebrew_explanation": "चंद्र-सौर कैलेंडर, 12-13 महीने, सृष्टि की उत्पत्ति (3761 ईसा पूर्व) से शुरू होता है। इसका उपयोग धार्मिक अनुष्ठानों के लिए किया जाता है।",
+  "cal_ethiopian_explanation": "सौर कैलेंडर, 13 महीने (12 महीने 30 दिनों के और 1 महीना 5-6 दिनों का), ग्रेगोरियन कैलेंडर से 7-8 साल पीछे।",
+  "cal_creationist_explanation": "कालानुक्रमिक ढांचा, बाइबिल की वंशावलियों से पृथ्वी की आयु की गणना करता है, जिसके अनुसार सृष्टि की रचना 6,000-10,000 वर्ष पूर्व हुई थी।",
+  "cal_gregorian_usage": "उपयोग: 95% (आधिकारिक) - लगभग हर देश में आधिकारिक और आर्थिक उद्देश्यों के लिए नागरिक कैलेंडर के रूप में उपयोग किया जाता है।",
+  "cal_islamic_usage": "उपयोग: 24% (धार्मिक) - लगभग 2 अरब मुसलमानों (दुनिया के लगभग 24%) द्वारा मनाया जाता है, मुख्य रूप से धार्मिक त्योहारों (रमजान, हज आदि) के लिए।",
+  "cal_chinese_usage": "उपयोग: 18% (सांस्कृतिक) - चंद्र नव वर्ष जैसे त्योहारों के लिए लगभग 1.4 अरब चीनी लोगों द्वारा मनाया जाता है।",
+  "cal_persian_usage": "उपयोग: 1.5% (नागरिक/सांस्कृतिक) - ईरान (~89 मिलियन) और अफगानिस्तान (~41 मिलियन) में आधिकारिक कैलेंडर।",
+  "cal_balinese_usage": "उपयोग: 1.5% (नागरिक) - इथियोपिया में आधिकारिक (~126 मिलियन) और इरिट्रिया में उपयोग किया जाता है।",
+  "cal_hebrew_usage": "उपयोग: 0.2% (धार्मिक) - यहूदी समुदायों (~16 मिलियन लोग) द्वारा धार्मिक उद्देश्यों के लिए उपयोग किया जाता है।",
+  "cal_ethiopian_usage": "उपयोग: <0.1% (सांस्कृतिक) - मुख्य रूप से बाली (इंडोनेशिया) में उपयोग किया जाता है, लगभग 4.5 मिलियन लोग।",
+  "cal_creationist_usage": "उपयोग: <0.01% (विशिष्ट) - कुछ कट्टरपंथी ईसाई समुदायों द्वारा उपयोग किया जाता है।",
   "settings_source_academy": "अकादमी",
   "settings_parameters": "पैरामीटर",
   "controls_mouse": "चूहा",
@@ -346,22 +346,21 @@
   "controls_mouse_drag_pan": "पैन टाइमलाइन",
   "controls_mouse_wheel": "पहिया",
   "controls_mouse_wheel_zoom_at_cursor": "कर्सर पर ज़ूम करें",
-  "controls_mouse_pan_sensitivity": "पैन संवेदनशीलता",
   "controls_mouse_enable_inertia": "घर्षण के बाद संवेग",
   "controls_keyboard": "कीबोर्ड",
-  "controls_keyboard_pan_left_right": "पैन बाएँ/दाएँ",
+  "controls_keyboard_pan_left_right": "कड़ाही",
   "controls_keyboard_key_shift": "बदलाव",
-  "controls_keyboard_fast_pan": "फास्ट पैन (5x)",
-  "controls_keyboard_zoom_in_out": "ज़ूम इन/आउट",
+  "controls_keyboard_fast_pan": "तेज़ पैन",
+  "controls_keyboard_zoom_in_out": "ज़ूम",
   "controls_keyboard_key_home": "घर",
-  "controls_keyboard_jump_to_present": "वर्तमान पर जाएं",
+  "controls_keyboard_jump_to_present": "अभी पर जाएं",
   "controls_keyboard_reset_zoom": "ज़ूम रीसेट करें",
-  "controls_keyboard_invert_arrows": "तीर कुंजियों को उल्टा करें",
+  "controls_keyboard_invert_arrows": "पैन को उल्टा कर दें",
   "controls_touch": "छूना",
   "controls_touch_drag": "खींचना",
   "controls_touch_drag_pan": "कड़ाही",
   "controls_touch_pinch": "चुटकी",
   "controls_touch_pinch_zoom": "ज़ूम इन/आउट",
-  "controls_touch_zoom_sensitivity": "चुटकी संवेदनशीलता",
+  "controls_touch_zoom_sensitivity": "चुटकी",
   "controls_touch_enable_pinch_zoom": "पिंच टू ज़ूम को सक्षम करें"
 }
