--- a/Jsons/language/it.json
+++ b/Jsons/language/it.json
@@ -27,7 +27,7 @@
   "timeview3_show": "Mostra/Nascondi la visualizzazione temporale alternativa",
   "timeview1_set": "Modifica la visualizzazione temporale principale",
   "timeview2_set": "Modifica la visualizzazione temporale alternativa",
-  "timeview_save": "Salva la visualizzazione del tempo",
+  "timeview_save": "Salva la visualizzazione temporale",
   "catalogs_show": "Cataloghi",
   "database_show": "Mostra database",
   "load": "Pannelli e scatole di carico",
@@ -83,35 +83,6 @@
   "source_wikipedia": "Wikipedia",
   "source_grokipedia": "Grokipedia",
   "source_worldhistory": "Storia del mondo",
-  "cal_name": "Calendario:",
-  "cal_availability_yes": "Disponibile",
-  "cal_availability_no": "Non ancora pronto (abbiamo bisogno di aiuto... contributo-sito-web-qui)",
-  "cal_other": "Calendari",
-  "cal_usage": "Utilizzo:",
-  "cal_gregorian": "gregoriano",
-  "cal_islamic": "Islamico (Hijri)",
-  "cal_chinese": "cinese",
-  "cal_persian": "Persiano (Egira solare)",
-  "cal_ethiopian": "etiope",
-  "cal_hebrew": "ebraico",
-  "cal_balinese": "Balinese",
-  "cal_creationist": "creazionista",
-  "cal_gregorian_explanation": "Calendario solare, 12 mesi, 365-366 giorni, introdotto da Papa Gregorio XIII nel 1582.",
-  "cal_islamic_explanation": "Il calendario lunare, 12 mesi, 354-355 giorni, inizia con la migrazione di Maometto a Medina (622 d.C.).",
-  "cal_chinese_explanation": "Calendario lunisolare, che combina i mesi lunari, l'anno solare e il ciclo zodiacale di 12 anni degli animali. Utilizzato per le feste tradizionali dell'Asia orientale.",
-  "cal_persian_explanation": "Il calendario solare, di 365-366 giorni, inizia con l'equinozio di primavera (Nowruz).",
-  "cal_balinese_explanation": "Sistema di calendario che combina cicli simultanei, tra cui un calendario Pawukon di 210 giorni. Utilizzato per le cerimonie religiose.",
-  "cal_hebrew_explanation": "Calendario lunisolare, 12-13 mesi, inizia dalla creazione (3761 a.C.). Utilizzato per le osservanze religiose.",
-  "cal_ethiopian_explanation": "Calendario solare, 13 mesi (12 di 30 giorni e 1 di 5-6 giorni), 7-8 anni indietro rispetto al calendario gregoriano.",
-  "cal_creationist_explanation": "Quadro cronologico: calcola l'età della Terra dalle genealogie bibliche, collocando la creazione tra 6.000 e 10.000 anni fa.",
-  "cal_gregorian_usage": "Utilizzo: 95% (ufficiale) - Utilizzato come calendario civile in quasi tutti i paesi per scopi ufficiali ed economici.",
-  "cal_islamic_usage": "Utilizzo: 24% (religioso) - Osservato da circa 2 miliardi di musulmani (circa il 24% del mondo), principalmente per le festività religiose (Ramadan, Hajj, ecc.).",
-  "cal_chinese_usage": "Utilizzo: 18% (culturale) - Celebrato da circa 1,4 miliardi di cinesi in occasione di festività come il Capodanno lunare.",
-  "cal_persian_usage": "Utilizzo: 1,5% (civile/culturale) - Calendario ufficiale in Iran (~89M) e Afghanistan (~41M).",
-  "cal_balinese_usage": "Utilizzo: 1,5% (civile) - Ufficiale in Etiopia (~126M) e utilizzato in Eritrea.",
-  "cal_hebrew_usage": "Utilizzo: 0,2% (religioso) - Utilizzato dalle comunità ebraiche (~16 milioni di persone) per scopi religiosi.",
-  "cal_ethiopian_usage": "Utilizzo: <0,1% (culturale) - Utilizzato principalmente a Bali (Indonesia), circa 4,5 milioni di persone.",
-  "cal_creationist_usage": "Utilizzo: <0,01% (nicchia) - Utilizzato da alcune comunità cristiane fondamentaliste.",
   "tv_universe": "Universo",
   "tv_life": "Vita",
   "tv_dinosaurs": "Dinosauri",
@@ -339,6 +310,35 @@
   "time_region_week_starts": "Settimana",
   "time_region_week_starts_monday": "Lunedi",
   "time_region_week_starts_sunday": "Domenica",
+  "cal_name": "Calendario:",
+  "cal_availability_yes": "Disponibile",
+  "cal_availability_no": "Non ancora pronto (abbiamo bisogno di aiuto... contributo-sito-web-qui)",
+  "cal_other": "Calendari",
+  "cal_usage": "Utilizzo:",
+  "cal_gregorian": "gregoriano",
+  "cal_islamic": "Islamico (Hijri)",
+  "cal_chinese": "cinese",
+  "cal_persian": "Persiano (Egira solare)",
+  "cal_ethiopian": "etiope",
+  "cal_hebrew": "ebraico",
+  "cal_balinese": "Balinese",
+  "cal_creationist": "creazionista",
+  "cal_gregorian_explanation": "Calendario solare, 12 mesi, 365-366 giorni, introdotto da Papa Gregorio XIII nel 1582.",
+  "cal_islamic_explanation": "Il calendario lunare, 12 mesi, 354-355 giorni, inizia con la migrazione di Maometto a Medina (622 d.C.).",
+  "cal_chinese_explanation": "Calendario lunisolare, che combina i mesi lunari, l'anno solare e il ciclo zodiacale di 12 anni degli animali. Utilizzato per le feste tradizionali dell'Asia orientale.",
+  "cal_persian_explanation": "Il calendario solare, di 365-366 giorni, inizia con l'equinozio di primavera (Nowruz).",
+  "cal_balinese_explanation": "Sistema di calendario che combina cicli simultanei, tra cui un calendario Pawukon di 210 giorni. Utilizzato per le cerimonie religiose.",
+  "cal_hebrew_explanation": "Calendario lunisolare, 12-13 mesi, inizia dalla creazione (3761 a.C.). Utilizzato per le osservanze religiose.",
+  "cal_ethiopian_explanation": "Calendario solare, 13 mesi (12 di 30 giorni e 1 di 5-6 giorni), 7-8 anni indietro rispetto al calendario gregoriano.",
+  "cal_creationist_explanation": "Quadro cronologico: calcola l'età della Terra dalle genealogie bibliche, collocando la creazione tra 6.000 e 10.000 anni fa.",
+  "cal_gregorian_usage": "Utilizzo: 95% (ufficiale) - Utilizzato come calendario civile in quasi tutti i paesi per scopi ufficiali ed economici.",
+  "cal_islamic_usage": "Utilizzo: 24% (religioso) - Osservato da circa 2 miliardi di musulmani (circa il 24% del mondo), principalmente per le festività religiose (Ramadan, Hajj, ecc.).",
+  "cal_chinese_usage": "Utilizzo: 18% (culturale) - Celebrato da circa 1,4 miliardi di cinesi in occasione di festività come il Capodanno lunare.",
+  "cal_persian_usage": "Utilizzo: 1,5% (civile/culturale) - Calendario ufficiale in Iran (~89M) e Afghanistan (~41M).",
+  "cal_balinese_usage": "Utilizzo: 1,5% (civile) - Ufficiale in Etiopia (~126M) e utilizzato in Eritrea.",
+  "cal_hebrew_usage": "Utilizzo: 0,2% (religioso) - Utilizzato dalle comunità ebraiche (~16 milioni di persone) per scopi religiosi.",
+  "cal_ethiopian_usage": "Utilizzo: <0,1% (culturale) - Utilizzato principalmente a Bali (Indonesia), circa 4,5 milioni di persone.",
+  "cal_creationist_usage": "Utilizzo: <0,01% (nicchia) - Utilizzato da alcune comunità cristiane fondamentaliste.",
   "settings_source_academy": "Accademia",
   "settings_parameters": "Parametri",
   "controls_mouse": "Topo",
@@ -346,22 +346,21 @@
   "controls_mouse_drag_pan": "Panoramica della cronologia",
   "controls_mouse_wheel": "Ruota",
   "controls_mouse_wheel_zoom_at_cursor": "Zoom sul cursore",
-  "controls_mouse_pan_sensitivity": "Sensibilità panoramica",
   "controls_mouse_enable_inertia": "Momento dopo il trascinamento",
   "controls_keyboard": "Tastiera",
-  "controls_keyboard_pan_left_right": "Panoramica a sinistra/destra",
+  "controls_keyboard_pan_left_right": "Padella",
   "controls_keyboard_key_shift": "Spostare",
-  "controls_keyboard_fast_pan": "Panoramica veloce (5x)",
-  "controls_keyboard_zoom_in_out": "Ingrandisci/riduci",
+  "controls_keyboard_fast_pan": "Panoramica veloce",
+  "controls_keyboard_zoom_in_out": "Zoom",
   "controls_keyboard_key_home": "Casa",
-  "controls_keyboard_jump_to_present": "Vai al presente",
+  "controls_keyboard_jump_to_present": "Vai al momento attuale",
   "controls_keyboard_reset_zoom": "Reimposta zoom",
-  "controls_keyboard_invert_arrows": "Inverti i tasti freccia",
+  "controls_keyboard_invert_arrows": "Inverti padella",
   "controls_touch": "Tocco",
   "controls_touch_drag": "Lagna",
   "controls_touch_drag_pan": "Padella",
   "controls_touch_pinch": "Pizzico",
   "controls_touch_pinch_zoom": "Ingrandisci/riduci",
-  "controls_touch_zoom_sensitivity": "Sensibilità al pizzicore",
+  "controls_touch_zoom_sensitivity": "Pizzico",
   "controls_touch_enable_pinch_zoom": "Abilita il pizzico per ingrandire"
 }
