--- a/Jsons/language/ja.json
+++ b/Jsons/language/ja.json
@@ -22,7 +22,7 @@
   "toggle_vh": "垂直/水平を切り替える",
   "timeview_edition": "タイムビュー",
   "search_show": "検索",
-  "timeview1_show": "メインタイムビューの表示/非表示",
+  "timeview1_show": "メインタイムビューを表示/非表示",
   "timeview2_show": "代替タイムビューの表示/非表示",
   "timeview3_show": "代替タイムビューの表示/非表示",
   "timeview1_set": "メインタイムビューを編集",
@@ -83,35 +83,6 @@
   "source_wikipedia": "ウィキペディア",
   "source_grokipedia": "グロキペディア",
   "source_worldhistory": "世界史",
-  "cal_name": "カレンダー：",
-  "cal_availability_yes": "利用可能",
-  "cal_availability_no": "まだ準備ができていません (支援が必要です... 貢献ウェブサイトはこちら)",
-  "cal_other": "カレンダー",
-  "cal_usage": "使用法：",
-  "cal_gregorian": "グレゴリオ暦",
-  "cal_islamic": "イスラム教（ヒジュラ暦）",
-  "cal_chinese": "中国語",
-  "cal_persian": "ペルシア語（太陽暦ヒジュラ暦）",
-  "cal_ethiopian": "エチオピア人",
-  "cal_hebrew": "ヘブライ語",
-  "cal_balinese": "バリ人",
-  "cal_creationist": "創造論者",
-  "cal_gregorian_explanation": "太陽暦、12 か月、365 ～ 366 日、1582 年に教皇グレゴリウス 13 世によって導入されました。",
-  "cal_islamic_explanation": "太陰暦（12 か月、354 ～ 355 日）は、ムハンマドのメディナへの移住（西暦 622 年）から始まります。",
-  "cal_chinese_explanation": "太陰太陽暦は、太陰月、太陽年、そして12年周期の干支を組み合わせた暦です。東アジアの伝統的な祭りに用いられます。",
-  "cal_persian_explanation": "太陽暦は 365 ～ 366 日で、春分 (ノウルーズ) から始まります。",
-  "cal_balinese_explanation": "210日間のパウコン暦を含む、複数の周期を組み合わせた暦体系。宗教儀式に用いられる。",
-  "cal_hebrew_explanation": "太陰太陽暦（12～13か月）は天地創造（紀元前3761年）から始まります。宗教行事に用いられます。",
-  "cal_ethiopian_explanation": "太陽暦、13 か月 (30 日が 12 か月、5 ～ 6 日が 1 か月)、グレゴリオ暦より 7 ～ 8 年遅れています。",
-  "cal_creationist_explanation": "年代順の枠組みで、聖書の系図から地球の年齢を計算し、創造を 6,000 ～ 10,000 年前に位置付けます。",
-  "cal_gregorian_usage": "使用率: 95% (公式) - ほぼすべての国で公式および経済目的で民間暦として使用されています。",
-  "cal_islamic_usage": "使用率: 24% (宗教的) - 約 20 億人のイスラム教徒 (世界の約 24%) が主に宗教上の祝日 (ラマダン、ハッジなど) に実施します。",
-  "cal_chinese_usage": "使用率: 18% (文化的) - 旧正月などの祭りで約 14 億人の中国人がこれを祝います。",
-  "cal_persian_usage": "使用率: 1.5% (民間/文化) - イラン (~8,900 万) とアフガニスタン (~4,100 万) の公式カレンダー。",
-  "cal_balinese_usage": "使用率: 1.5% (民間) - エチオピア(~126M)で公用語、エリトリアで使用。",
-  "cal_hebrew_usage": "使用率: 0.2% (宗教的) - ユダヤ人コミュニティ (約 1,600 万人) が宗教的な目的で使用しています。",
-  "cal_ethiopian_usage": "使用率: <0.1% (文化的) - 主にバリ島 (インドネシア) で使用されており、約 450 万人が使用しています。",
-  "cal_creationist_usage": "使用率: <0.01% (ニッチ) - いくつかの原理主義キリスト教コミュニティで使用されています。",
   "tv_universe": "宇宙",
   "tv_life": "人生",
   "tv_dinosaurs": "恐竜",
@@ -339,6 +310,35 @@
   "time_region_week_starts": "週",
   "time_region_week_starts_monday": "月曜日",
   "time_region_week_starts_sunday": "日曜日",
+  "cal_name": "カレンダー：",
+  "cal_availability_yes": "利用可能",
+  "cal_availability_no": "まだ準備ができていません（助けが必要です...貢献ウェブサイトはこちら）",
+  "cal_other": "カレンダー",
+  "cal_usage": "使用法：",
+  "cal_gregorian": "グレゴリオ暦",
+  "cal_islamic": "イスラム教（ヒジュラ暦）",
+  "cal_chinese": "中国語",
+  "cal_persian": "ペルシア語（太陽暦ヒジュラ暦）",
+  "cal_ethiopian": "エチオピア人",
+  "cal_hebrew": "ヘブライ語",
+  "cal_balinese": "バリ人",
+  "cal_creationist": "創造論者",
+  "cal_gregorian_explanation": "太陽暦、12 か月、365 ～ 366 日、1582 年に教皇グレゴリウス 13 世によって導入されました。",
+  "cal_islamic_explanation": "太陰暦（12 か月、354 ～ 355 日）は、ムハンマドのメディナへの移住（西暦 622 年）から始まります。",
+  "cal_chinese_explanation": "太陰太陽暦は、太陰月、太陽年、そして12年周期の干支を組み合わせた暦です。東アジアの伝統的な祭りに用いられます。",
+  "cal_persian_explanation": "太陽暦は 365 ～ 366 日で、春分 (ノウルーズ) から始まります。",
+  "cal_balinese_explanation": "210日間のパウコン暦を含む、複数の周期を組み合わせた暦体系。宗教儀式に用いられる。",
+  "cal_hebrew_explanation": "太陰太陽暦（12～13か月）は天地創造（紀元前3761年）から始まります。宗教行事に用いられます。",
+  "cal_ethiopian_explanation": "太陽暦、13 か月 (30 日が 12 か月、5 ～ 6 日が 1 か月)、グレゴリオ暦より 7 ～ 8 年遅れています。",
+  "cal_creationist_explanation": "年代順の枠組みで、聖書の系図から地球の年齢を計算し、創造を 6,000 ～ 10,000 年前に位置付けます。",
+  "cal_gregorian_usage": "使用率: 95% (公式) - ほぼすべての国で公式および経済目的で民間暦として使用されています。",
+  "cal_islamic_usage": "使用率: 24% (宗教的) - 約 20 億人のイスラム教徒 (世界の約 24%) が主に宗教上の祝日 (ラマダン、ハッジなど) に遵守します。",
+  "cal_chinese_usage": "使用率: 18% (文化的) - 旧正月などの祭りで約 14 億人の中国人がこれを祝います。",
+  "cal_persian_usage": "使用率: 1.5% (民間/文化) - イラン (~8,900 万) とアフガニスタン (~4,100 万) の公式カレンダー。",
+  "cal_balinese_usage": "使用率: 1.5% (民間) - エチオピア(~126M)で公用語、エリトリアで使用。",
+  "cal_hebrew_usage": "使用率: 0.2% (宗教的) - ユダヤ人コミュニティ (約 1,600 万人) が宗教的な目的で使用しています。",
+  "cal_ethiopian_usage": "使用率: <0.1% (文化的) - 主にバリ島 (インドネシア) で使用されており、約 450 万人が使用しています。",
+  "cal_creationist_usage": "使用率: <0.01% (ニッチ) - いくつかの原理主義キリスト教コミュニティで使用されています。",
   "settings_source_academy": "アカデミー",
   "settings_parameters": "パラメータ",
   "controls_mouse": "ねずみ",
@@ -346,22 +346,21 @@
   "controls_mouse_drag_pan": "タイムラインをパン",
   "controls_mouse_wheel": "車輪",
   "controls_mouse_wheel_zoom_at_cursor": "カーソル位置でズーム",
-  "controls_mouse_pan_sensitivity": "パン感度",
   "controls_mouse_enable_inertia": "抗力後の運動量",
   "controls_keyboard": "キーボード",
-  "controls_keyboard_pan_left_right": "左/右にパン",
+  "controls_keyboard_pan_left_right": "パン",
   "controls_keyboard_key_shift": "シフト",
-  "controls_keyboard_fast_pan": "高速パン（5倍）",
-  "controls_keyboard_zoom_in_out": "ズームイン/ズームアウト",
+  "controls_keyboard_fast_pan": "高速パン",
+  "controls_keyboard_zoom_in_out": "ズーム",
   "controls_keyboard_key_home": "家",
-  "controls_keyboard_jump_to_present": "現在地へジャンプ",
+  "controls_keyboard_jump_to_present": "今すぐジャンプ",
   "controls_keyboard_reset_zoom": "ズームをリセット",
-  "controls_keyboard_invert_arrows": "矢印キーを反転",
+  "controls_keyboard_invert_arrows": "パンを反転する",
   "controls_touch": "触る",
   "controls_touch_drag": "ドラッグ",
   "controls_touch_drag_pan": "パン",
   "controls_touch_pinch": "ピンチ",
   "controls_touch_pinch_zoom": "ズームイン/ズームアウト",
-  "controls_touch_zoom_sensitivity": "ピンチ感度",
+  "controls_touch_zoom_sensitivity": "ピンチ",
   "controls_touch_enable_pinch_zoom": "ピンチズームを有効にする"
 }
