--- a/Jsons/language/pl.json
+++ b/Jsons/language/pl.json
@@ -83,35 +83,6 @@
   "source_wikipedia": "Wikipedia",
   "source_grokipedia": "Grokipedia",
   "source_worldhistory": "Historia świata",
-  "cal_name": "Kalendarz:",
-  "cal_availability_yes": "Dostępny",
-  "cal_availability_no": "Jeszcze nie gotowe (potrzebujemy pomocy... wkład-strona-tutaj)",
-  "cal_other": "Kalendarze",
-  "cal_usage": "Stosowanie:",
-  "cal_gregorian": "gregoriański",
-  "cal_islamic": "Islamski (Hidżry)",
-  "cal_chinese": "chiński",
-  "cal_persian": "Perski (słoneczny Hidżry)",
-  "cal_ethiopian": "etiopczyk",
-  "cal_hebrew": "hebrajski",
-  "cal_balinese": "Balijski",
-  "cal_creationist": "Kreacjonista",
-  "cal_gregorian_explanation": "Kalendarz słoneczny, 12 miesięcy, 365-366 dni, wprowadzony przez papieża Grzegorza XIII w 1582 roku.",
-  "cal_islamic_explanation": "Kalendarz księżycowy, składający się z 12 miesięcy i 354–355 dni, rozpoczyna się wraz z emigracją Mahometa do Medyny (622 r. n.e.).",
-  "cal_chinese_explanation": "Kalendarz księżycowo-słoneczny, łączący miesiące księżycowe, rok słoneczny i 12-letni cykl zodiakalny zwierząt. Używany podczas tradycyjnych świąt wschodnioazjatyckich.",
-  "cal_persian_explanation": "Kalendarz słoneczny, liczący 365–366 dni, rozpoczyna się od równonocy wiosennej (Nowruz).",
-  "cal_balinese_explanation": "System kalendarzowy łączący równoległe cykle, w tym 210-dniowy kalendarz Pawukon. Używany podczas ceremonii religijnych.",
-  "cal_hebrew_explanation": "Kalendarz księżycowo-słoneczny, 12-13-miesięczny, rozpoczyna się od stworzenia świata (3761 r. p.n.e.). Używany do obrzędów religijnych.",
-  "cal_ethiopian_explanation": "Kalendarz słoneczny, 13 miesięcy (12 po 30 dni i 1 miesiąc po 5-6 dni), opóźniony o 7-8 lat w stosunku do kalendarza gregoriańskiego.",
-  "cal_creationist_explanation": "Ramy chronologiczne, obliczają wiek Ziemi na podstawie biblijnych genealogii, umieszczając stworzenie Ziemi na 6000–10 000 lat temu.",
-  "cal_gregorian_usage": "Wykorzystanie: 95% (oficjalne) – Używany jako kalendarz cywilny w niemal każdym kraju do celów oficjalnych i ekonomicznych.",
-  "cal_islamic_usage": "Zastosowanie: 24% (religijne) – Przestrzegane przez ~2 miliardy muzułmanów (~24% świata), głównie z okazji świąt religijnych (Ramadan, Hadżdż itp.).",
-  "cal_chinese_usage": "Użycie: 18% (kulturowe) – obchodzone przez ok. 1,4 miliarda Chińczyków podczas świąt takich jak Nowy Rok Księżycowy.",
-  "cal_persian_usage": "Użycie: 1,5% (cywilne/kulturalne) – oficjalny kalendarz w Iranie (~89 mln) i Afganistanie (~41 mln).",
-  "cal_balinese_usage": "Zastosowanie: 1,5% (cywilne) – oficjalne w Etiopii (~126 mln) i używane w Erytrei.",
-  "cal_hebrew_usage": "Zastosowanie: 0,2% (religijne) – używane przez społeczności żydowskie (ok. 16 mln osób) w celach religijnych.",
-  "cal_ethiopian_usage": "Zastosowanie: <0,1% (kulturowe) – używane głównie na Bali (Indonezja), ok. 4,5 mln osób.",
-  "cal_creationist_usage": "Zastosowanie: <0,01% (nisza) – używane przez kilka wspólnot chrześcijańskich o charakterze fundamentalistycznym.",
   "tv_universe": "Wszechświat",
   "tv_life": "Życie",
   "tv_dinosaurs": "Dinozaury",
@@ -339,6 +310,35 @@
   "time_region_week_starts": "Tydzień",
   "time_region_week_starts_monday": "Poniedziałek",
   "time_region_week_starts_sunday": "Niedziela",
+  "cal_name": "Kalendarz:",
+  "cal_availability_yes": "Dostępny",
+  "cal_availability_no": "Jeszcze nie gotowe (potrzebujemy pomocy... wkład-strona-tutaj)",
+  "cal_other": "Kalendarze",
+  "cal_usage": "Stosowanie:",
+  "cal_gregorian": "gregoriański",
+  "cal_islamic": "Islamski (Hidżry)",
+  "cal_chinese": "chiński",
+  "cal_persian": "Perski (słoneczny Hidżry)",
+  "cal_ethiopian": "etiopczyk",
+  "cal_hebrew": "hebrajski",
+  "cal_balinese": "Balijski",
+  "cal_creationist": "Kreacjonista",
+  "cal_gregorian_explanation": "Kalendarz słoneczny, 12 miesięcy, 365-366 dni, wprowadzony przez papieża Grzegorza XIII w 1582 roku.",
+  "cal_islamic_explanation": "Kalendarz księżycowy, składający się z 12 miesięcy i 354–355 dni, rozpoczyna się wraz z emigracją Mahometa do Medyny (622 r. n.e.).",
+  "cal_chinese_explanation": "Kalendarz księżycowo-słoneczny, łączący miesiące księżycowe, rok słoneczny i 12-letni cykl zodiakalny zwierząt. Używany podczas tradycyjnych świąt wschodnioazjatyckich.",
+  "cal_persian_explanation": "Kalendarz słoneczny, liczący 365–366 dni, rozpoczyna się od równonocy wiosennej (Nowruz).",
+  "cal_balinese_explanation": "System kalendarzowy łączący równoległe cykle, w tym 210-dniowy kalendarz Pawukon. Używany podczas ceremonii religijnych.",
+  "cal_hebrew_explanation": "Kalendarz księżycowo-słoneczny, 12-13-miesięczny, rozpoczyna się od stworzenia świata (3761 r. p.n.e.). Używany do obrzędów religijnych.",
+  "cal_ethiopian_explanation": "Kalendarz słoneczny, 13 miesięcy (12 po 30 dni i 1 miesiąc po 5-6 dni), opóźniony o 7-8 lat w stosunku do kalendarza gregoriańskiego.",
+  "cal_creationist_explanation": "Ramy chronologiczne, obliczają wiek Ziemi na podstawie biblijnych genealogii, umieszczając stworzenie Ziemi na 6000–10 000 lat temu.",
+  "cal_gregorian_usage": "Wykorzystanie: 95% (oficjalne) – Używany jako kalendarz cywilny w niemal każdym kraju do celów oficjalnych i ekonomicznych.",
+  "cal_islamic_usage": "Zastosowanie: 24% (religijne) – Przestrzegane przez ~2 miliardy muzułmanów (~24% świata), głównie z okazji świąt religijnych (Ramadan, Hadżdż itp.).",
+  "cal_chinese_usage": "Użycie: 18% (kulturowe) – obchodzone przez ok. 1,4 miliarda Chińczyków podczas świąt takich jak Nowy Rok Księżycowy.",
+  "cal_persian_usage": "Użycie: 1,5% (cywilne/kulturalne) – oficjalny kalendarz w Iranie (~89 mln) i Afganistanie (~41 mln).",
+  "cal_balinese_usage": "Zastosowanie: 1,5% (cywilne) – oficjalne w Etiopii (~126 mln) i używane w Erytrei.",
+  "cal_hebrew_usage": "Zastosowanie: 0,2% (religijne) – używane przez społeczności żydowskie (ok. 16 mln osób) w celach religijnych.",
+  "cal_ethiopian_usage": "Zastosowanie: <0,1% (kulturowe) – używane głównie na Bali (Indonezja), ok. 4,5 mln osób.",
+  "cal_creationist_usage": "Zastosowanie: <0,01% (nisza) – używane przez kilka wspólnot chrześcijańskich o charakterze fundamentalistycznym.",
   "settings_source_academy": "Akademia",
   "settings_parameters": "Parametry",
   "controls_mouse": "Mysz",
@@ -346,22 +346,21 @@
   "controls_mouse_drag_pan": "Przesuń oś czasu",
   "controls_mouse_wheel": "Koło",
   "controls_mouse_wheel_zoom_at_cursor": "Powiększ kursor",
-  "controls_mouse_pan_sensitivity": "Czułość panoramowania",
   "controls_mouse_enable_inertia": "Pęd po przeciągnięciu",
   "controls_keyboard": "Klawiatura",
-  "controls_keyboard_pan_left_right": "Przesuń w lewo/prawo",
+  "controls_keyboard_pan_left_right": "Patelnia",
   "controls_keyboard_key_shift": "Zmiana",
-  "controls_keyboard_fast_pan": "Szybki obrót (5x)",
-  "controls_keyboard_zoom_in_out": "Powiększ/pomniejsz",
+  "controls_keyboard_fast_pan": "Szybki patelnia",
+  "controls_keyboard_zoom_in_out": "Brzęczenie",
   "controls_keyboard_key_home": "Dom",
-  "controls_keyboard_jump_to_present": "Przejdź do prezentacji",
+  "controls_keyboard_jump_to_present": "Przejdź do teraz",
   "controls_keyboard_reset_zoom": "Zresetuj powiększenie",
-  "controls_keyboard_invert_arrows": "Odwróć klawisze strzałek",
+  "controls_keyboard_invert_arrows": "Odwróć patelnię",
   "controls_touch": "Dotykać",
   "controls_touch_drag": "Ciągnąć",
   "controls_touch_drag_pan": "Patelnia",
   "controls_touch_pinch": "Szczypta",
   "controls_touch_pinch_zoom": "Powiększ/pomniejsz",
-  "controls_touch_zoom_sensitivity": "Wrażliwość na szczypanie",
-  "controls_touch_enable_pinch_zoom": "Włącz funkcję szczypania, aby powiększyć"
+  "controls_touch_zoom_sensitivity": "Szczypta",
+  "controls_touch_enable_pinch_zoom": "Włącz powiększanie przez szczypanie"
 }
