--- a/Jsons/language/ru.json
+++ b/Jsons/language/ru.json
@@ -83,35 +83,6 @@
   "source_wikipedia": "Википедия",
   "source_grokipedia": "Грокипедия",
   "source_worldhistory": "Всемирная история",
-  "cal_name": "Календарь:",
-  "cal_availability_yes": "Доступный",
-  "cal_availability_no": "Пока не готово (нам нужна помощь... сайт для пожертвований здесь)",
-  "cal_other": "Календари",
-  "cal_usage": "Применение:",
-  "cal_gregorian": "григорианский",
-  "cal_islamic": "Исламский (хиджри)",
-  "cal_chinese": "китайский",
-  "cal_persian": "Персидский (солнечный хиджри)",
-  "cal_ethiopian": "эфиопский",
-  "cal_hebrew": "иврит",
-  "cal_balinese": "балийский",
-  "cal_creationist": "креационист",
-  "cal_gregorian_explanation": "Солнечный календарь, 12 месяцев, 365-366 дней, введенный папой Григорием XIII в 1582 году.",
-  "cal_islamic_explanation": "Лунный календарь, состоящий из 12 месяцев и 354-355 дней, начинается с переселения Мухаммеда в Медину (622 г. н.э.).",
-  "cal_chinese_explanation": "Лунно-солнечный календарь, сочетающий лунные месяцы, солнечный год и 12-летний цикл зодиакальных животных. Используется для традиционных восточноазиатских фестивалей.",
-  "cal_persian_explanation": "Солнечный календарь, состоящий из 365-366 дней, начинается с весеннего равноденствия (Новруза).",
-  "cal_balinese_explanation": "Календарная система, объединяющая одновременные циклы, включая 210-дневный календарь Павукон. Используется для религиозных церемоний.",
-  "cal_hebrew_explanation": "Лунно-солнечный календарь, 12-13 месяцев, начинается с момента сотворения мира (3761 г. до н.э.). Используется для религиозных обрядов.",
-  "cal_ethiopian_explanation": "Солнечный календарь, 13 месяцев (12 из 30 дней и 1 из 5-6 дней), отстает от григорианского календаря на 7-8 лет.",
-  "cal_creationist_explanation": "Хронологическая модель вычисляет возраст Земли на основе библейских родословных, определяя период сотворения мира как 6000-10000 лет назад.",
-  "cal_gregorian_usage": "Использование: 95% (официально) - Используется в качестве гражданского календаря почти во всех странах для официальных и экономических целей.",
-  "cal_islamic_usage": "Использование: 24% (религиозные) - Соблюдается примерно 2 миллиардами мусульман (примерно 24% населения мира), в основном во время религиозных праздников (Рамадан, Хадж и т. д.).",
-  "cal_chinese_usage": "Распространенность: 18% (культурная) - Используется примерно 1,4 миллиарда китайцев во время таких праздников, как Китайский Новый год.",
-  "cal_persian_usage": "Использование: 1,5% (гражданское/культурное) - Официальный календарь в Иране (~89 млн) и Афганистане (~41 млн).",
-  "cal_balinese_usage": "Применение: 1,5% (гражданское) - используется в официальных целях в Эфиопии (~126 млн) и в Эритрее.",
-  "cal_hebrew_usage": "Использование: 0,2% (религиозное) - Используется еврейскими общинами (~16 млн человек) в религиозных целях.",
-  "cal_ethiopian_usage": "Распространенность: <0,1% (культурная) - преимущественно используется на Бали (Индонезия), около 4,5 млн человек.",
-  "cal_creationist_usage": "Использование: <0,01% (нишевое) - Используется некоторыми фундаменталистскими христианскими общинами.",
   "tv_universe": "Вселенная",
   "tv_life": "Жизнь",
   "tv_dinosaurs": "Динозавры",
@@ -339,6 +310,35 @@
   "time_region_week_starts": "Неделя",
   "time_region_week_starts_monday": "Понедельник",
   "time_region_week_starts_sunday": "Воскресенье",
+  "cal_name": "Календарь:",
+  "cal_availability_yes": "Доступный",
+  "cal_availability_no": "Пока не готово (нам нужна помощь... сайт для пожертвований здесь)",
+  "cal_other": "Календари",
+  "cal_usage": "Применение:",
+  "cal_gregorian": "григорианский",
+  "cal_islamic": "Исламский (хиджри)",
+  "cal_chinese": "китайский",
+  "cal_persian": "Персидский (солнечный хиджри)",
+  "cal_ethiopian": "эфиопский",
+  "cal_hebrew": "иврит",
+  "cal_balinese": "балийский",
+  "cal_creationist": "креационист",
+  "cal_gregorian_explanation": "Солнечный календарь, 12 месяцев, 365-366 дней, введенный папой Григорием XIII в 1582 году.",
+  "cal_islamic_explanation": "Лунный календарь, состоящий из 12 месяцев и 354-355 дней, начинается с переселения Мухаммеда в Медину (622 г. н.э.).",
+  "cal_chinese_explanation": "Лунно-солнечный календарь, сочетающий лунные месяцы, солнечный год и 12-летний цикл зодиакальных животных. Используется для традиционных восточноазиатских фестивалей.",
+  "cal_persian_explanation": "Солнечный календарь, состоящий из 365-366 дней, начинается с весеннего равноденствия (Новруза).",
+  "cal_balinese_explanation": "Календарная система, объединяющая одновременные циклы, включая 210-дневный календарь Павукон. Используется для религиозных церемоний.",
+  "cal_hebrew_explanation": "Лунно-солнечный календарь, 12-13 месяцев, начинается с момента сотворения мира (3761 г. до н.э.). Используется для религиозных обрядов.",
+  "cal_ethiopian_explanation": "Солнечный календарь, 13 месяцев (12 из 30 дней и 1 из 5-6 дней), отстает от григорианского календаря на 7-8 лет.",
+  "cal_creationist_explanation": "Хронологическая модель вычисляет возраст Земли на основе библейских родословных, определяя период сотворения мира как 6000-10000 лет назад.",
+  "cal_gregorian_usage": "Использование: 95% (официально) - Используется в качестве гражданского календаря почти во всех странах для официальных и экономических целей.",
+  "cal_islamic_usage": "Использование: 24% (религиозные) - Соблюдается примерно 2 миллиардами мусульман (примерно 24% населения мира), в основном во время религиозных праздников (Рамадан, Хадж и т. д.).",
+  "cal_chinese_usage": "Распространенность: 18% (культурная) - Используется примерно 1,4 миллиарда китайцев во время таких праздников, как Китайский Новый год.",
+  "cal_persian_usage": "Использование: 1,5% (гражданское/культурное) - Официальный календарь в Иране (~89 млн) и Афганистане (~41 млн).",
+  "cal_balinese_usage": "Применение: 1,5% (гражданское) - используется в официальных целях в Эфиопии (~126 млн) и в Эритрее.",
+  "cal_hebrew_usage": "Использование: 0,2% (религиозное) - Используется еврейскими общинами (~16 млн человек) в религиозных целях.",
+  "cal_ethiopian_usage": "Распространенность: <0,1% (культурная) - преимущественно используется на Бали (Индонезия), около 4,5 млн человек.",
+  "cal_creationist_usage": "Использование: <0,01% (нишевое) - Используется некоторыми фундаменталистскими христианскими общинами.",
   "settings_source_academy": "Академия",
   "settings_parameters": "Параметры",
   "controls_mouse": "Мышь",
@@ -346,22 +346,21 @@
   "controls_mouse_drag_pan": "Хронология Пана",
   "controls_mouse_wheel": "Колесо",
   "controls_mouse_wheel_zoom_at_cursor": "Увеличьте масштаб при наведении курсора",
-  "controls_mouse_pan_sensitivity": "чувствительность панели",
   "controls_mouse_enable_inertia": "Импульс после торможения",
   "controls_keyboard": "Клавиатура",
-  "controls_keyboard_pan_left_right": "Панорамирование влево/вправо",
+  "controls_keyboard_pan_left_right": "Кастрюля",
   "controls_keyboard_key_shift": "Сдвиг",
-  "controls_keyboard_fast_pan": "Быстрая сковорода (5x)",
-  "controls_keyboard_zoom_in_out": "Увеличение/уменьшение масштаба",
+  "controls_keyboard_fast_pan": "Быстрая сковорода",
+  "controls_keyboard_zoom_in_out": "Зум",
   "controls_keyboard_key_home": "Дом",
-  "controls_keyboard_jump_to_present": "Перейти к настоящему",
+  "controls_keyboard_jump_to_present": "Перейти к настоящему моменту",
   "controls_keyboard_reset_zoom": "Сбросить масштаб",
-  "controls_keyboard_invert_arrows": "Инвертировать клавиши со стрелками",
+  "controls_keyboard_invert_arrows": "Переверните кастрюлю",
   "controls_touch": "Трогать",
   "controls_touch_drag": "Тащить",
   "controls_touch_drag_pan": "Кастрюля",
   "controls_touch_pinch": "Ущипнуть",
   "controls_touch_pinch_zoom": "Увеличение/уменьшение масштаба",
-  "controls_touch_zoom_sensitivity": "Чувствительность к сжатию",
+  "controls_touch_zoom_sensitivity": "Ущипнуть",
   "controls_touch_enable_pinch_zoom": "Включить масштабирование с помощью жеста «щипок»"
 }
