--- a/Jsons/language/uk.json
+++ b/Jsons/language/uk.json
@@ -83,35 +83,6 @@
   "source_wikipedia": "Вікіпедія",
   "source_grokipedia": "Грокіпедія",
   "source_worldhistory": "Всесвітня історія",
-  "cal_name": "Календар:",
-  "cal_availability_yes": "Доступно",
-  "cal_availability_no": "Ще не готові (нам потрібна допомога... веб-сайт для внесків тут)",
-  "cal_other": "Календарі",
-  "cal_usage": "Використання:",
-  "cal_gregorian": "григоріанський",
-  "cal_islamic": "Ісламський (хіджра)",
-  "cal_chinese": "китайська",
-  "cal_persian": "Перська (сонячна хіджра)",
-  "cal_ethiopian": "Ефіопський",
-  "cal_hebrew": "Іврит",
-  "cal_balinese": "Балійська",
-  "cal_creationist": "Креаціоніст",
-  "cal_gregorian_explanation": "Сонячний календар, 12 місяців, 365-366 днів, запроваджений Папою Григорієм XIII у 1582 році.",
-  "cal_islamic_explanation": "Місячний календар, 12 місяців, 354-355 днів, починається з переселення Мухаммеда до Медіни (622 рік н. е.).",
-  "cal_chinese_explanation": "Місячно-сонячний календар поєднує місячні місяці, сонячний рік, 12-річний зодіакальний цикл тварин. Використовується для традиційних східноазіатських свят.",
-  "cal_persian_explanation": "Сонячний календар, 365-366 днів, починається з весняного рівнодення (Навруза).",
-  "cal_balinese_explanation": "Календарна система, що поєднує одночасні цикли, включаючи 210-денний календар Павукон. Використовується для релігійних церемоній.",
-  "cal_hebrew_explanation": "Місячно-сонячний календар, 12-13 місяців, починається з моменту створення світу (3761 р. до н. е.). Використовується для релігійних обрядів.",
-  "cal_ethiopian_explanation": "Сонячний календар, 13 місяців (12 з 30 днів та 1 з 5-6 днів), на 7-8 років відстає від григоріанського календаря.",
-  "cal_creationist_explanation": "Хронологічна основа, розраховує вік Землі на основі біблійних генеалогій, розміщуючи створення світу 6000-10 000 років тому.",
-  "cal_gregorian_usage": "Використання: 95% (офіційне) – Використовується як цивільний календар майже в кожній країні для офіційних та економічних цілей.",
-  "cal_islamic_usage": "Використання: 24% (релігійне) – святкується приблизно 2 мільярдами мусульман (~24% світу), переважно на релігійні свята (Рамадан, Хадж тощо).",
-  "cal_chinese_usage": "Використання: 18% (культурне) – святкують ~1,4 мільярда китайців під час таких свят, як Місячний Новий рік.",
-  "cal_persian_usage": "Використання: 1,5% (цивільне/культурне) - Офіційний календар в Ірані (~89 млн) та Афганістані (~41 млн).",
-  "cal_balinese_usage": "Використання: 1,5% (цивільне) - офіційне в Ефіопії (~126 млн) та використовується в Еритреї.",
-  "cal_hebrew_usage": "Використання: 0,2% (релігійне) – Використовується єврейськими громадами (~16 млн осіб) для релігійних цілей.",
-  "cal_ethiopian_usage": "Використання: <0,1% (культурне) - В основному використовується на Балі (Індонезія), ~4,5 млн осіб.",
-  "cal_creationist_usage": "Використання: <0,01% (нішеве) – Використовується кількома фундаменталістськими християнськими громадами.",
   "tv_universe": "Всесвіт",
   "tv_life": "Життя",
   "tv_dinosaurs": "Динозаври",
@@ -339,6 +310,35 @@
   "time_region_week_starts": "Тиждень",
   "time_region_week_starts_monday": "Понеділок",
   "time_region_week_starts_sunday": "Неділя",
+  "cal_name": "Календар:",
+  "cal_availability_yes": "Доступно",
+  "cal_availability_no": "Ще не готові (нам потрібна допомога... веб-сайт для внесків тут)",
+  "cal_other": "Календарі",
+  "cal_usage": "Використання:",
+  "cal_gregorian": "григоріанський",
+  "cal_islamic": "Ісламський (хіджра)",
+  "cal_chinese": "китайська",
+  "cal_persian": "Перська (сонячна хіджра)",
+  "cal_ethiopian": "Ефіопський",
+  "cal_hebrew": "Іврит",
+  "cal_balinese": "Балійська",
+  "cal_creationist": "Креаціоніст",
+  "cal_gregorian_explanation": "Сонячний календар, 12 місяців, 365-366 днів, запроваджений Папою Григорієм XIII у 1582 році.",
+  "cal_islamic_explanation": "Місячний календар, 12 місяців, 354-355 днів, починається з переселення Мухаммеда до Медіни (622 рік н. е.).",
+  "cal_chinese_explanation": "Місячно-сонячний календар поєднує місячні місяці, сонячний рік, 12-річний зодіакальний цикл тварин. Використовується для традиційних східноазіатських свят.",
+  "cal_persian_explanation": "Сонячний календар, 365-366 днів, починається з весняного рівнодення (Навруза).",
+  "cal_balinese_explanation": "Календарна система, що поєднує одночасні цикли, включаючи 210-денний календар Павукон. Використовується для релігійних церемоній.",
+  "cal_hebrew_explanation": "Місячно-сонячний календар, 12-13 місяців, починається з моменту створення світу (3761 р. до н. е.). Використовується для релігійних обрядів.",
+  "cal_ethiopian_explanation": "Сонячний календар, 13 місяців (12 з 30 днів та 1 з 5-6 днів), на 7-8 років відстає від григоріанського календаря.",
+  "cal_creationist_explanation": "Хронологічна основа, розраховує вік Землі на основі біблійних генеалогій, розміщуючи створення світу 6000-10 000 років тому.",
+  "cal_gregorian_usage": "Використання: 95% (офіційне) – Використовується як цивільний календар майже в кожній країні для офіційних та економічних цілей.",
+  "cal_islamic_usage": "Використання: 24% (релігійне) – святкується приблизно 2 мільярдами мусульман (~24% світу), переважно на релігійні свята (Рамадан, Хадж тощо).",
+  "cal_chinese_usage": "Використання: 18% (культурне) – святкують ~1,4 мільярда китайців під час таких свят, як Місячний Новий рік.",
+  "cal_persian_usage": "Використання: 1,5% (цивільне/культурне) - Офіційний календар в Ірані (~89 млн) та Афганістані (~41 млн).",
+  "cal_balinese_usage": "Використання: 1,5% (цивільне) - офіційне в Ефіопії (~126 млн) та використовується в Еритреї.",
+  "cal_hebrew_usage": "Використання: 0,2% (релігійне) – Використовується єврейськими громадами (~16 млн осіб) для релігійних цілей.",
+  "cal_ethiopian_usage": "Використання: <0,1% (культурне) - В основному використовується на Балі (Індонезія), ~4,5 млн осіб.",
+  "cal_creationist_usage": "Використання: <0,01% (нішеве) – Використовується кількома фундаменталістськими християнськими громадами.",
   "settings_source_academy": "Академія",
   "settings_parameters": "Параметри",
   "controls_mouse": "Миша",
@@ -346,22 +346,21 @@
   "controls_mouse_drag_pan": "Панорамування часової шкали",
   "controls_mouse_wheel": "Колесо",
   "controls_mouse_wheel_zoom_at_cursor": "Масштабування курсора",
-  "controls_mouse_pan_sensitivity": "Чутливість панорамування",
   "controls_mouse_enable_inertia": "Імпульс після опору",
   "controls_keyboard": "Клавіатура",
-  "controls_keyboard_pan_left_right": "Панорамування вліво/вправо",
+  "controls_keyboard_pan_left_right": "Пательня",
   "controls_keyboard_key_shift": "Зсув",
-  "controls_keyboard_fast_pan": "Швидке панорамування (5x)",
-  "controls_keyboard_zoom_in_out": "Збільшення/зменшення масштабу",
+  "controls_keyboard_fast_pan": "Швидке панорамування",
+  "controls_keyboard_zoom_in_out": "Збільшити",
   "controls_keyboard_key_home": "Дім",
-  "controls_keyboard_jump_to_present": "Перейти до презентації",
+  "controls_keyboard_jump_to_present": "Перейти до теперішнього моменту",
   "controls_keyboard_reset_zoom": "Скинути масштаб",
-  "controls_keyboard_invert_arrows": "Інвертувати клавіші зі стрілками",
+  "controls_keyboard_invert_arrows": "Переверніть сковороду",
   "controls_touch": "Дотик",
   "controls_touch_drag": "Перетягування",
   "controls_touch_drag_pan": "Пательня",
   "controls_touch_pinch": "Щіпка",
   "controls_touch_pinch_zoom": "Збільшення/зменшення масштабу",
-  "controls_touch_zoom_sensitivity": "Чутливість до щипка",
+  "controls_touch_zoom_sensitivity": "Щіпка",
   "controls_touch_enable_pinch_zoom": "Увімкнути масштабування щіпками"
 }
