--- a/Jsons/language/zh.json
+++ b/Jsons/language/zh.json
@@ -83,35 +83,6 @@
   "source_wikipedia": "维基百科",
   "source_grokipedia": "Grokipedia",
   "source_worldhistory": "世界历史",
-  "cal_name": "日历：",
-  "cal_availability_yes": "可用的",
-  "cal_availability_no": "尚未准备就绪（我们需要帮助……请访问此处提交贡献网站）",
-  "cal_other": "日历",
-  "cal_usage": "用法：",
-  "cal_gregorian": "格里高利",
-  "cal_islamic": "伊斯兰（希吉拉）",
-  "cal_chinese": "中国人",
-  "cal_persian": "波斯语（太阳历）",
-  "cal_ethiopian": "埃塞俄比亚",
-  "cal_hebrew": "希伯来语",
-  "cal_balinese": "巴厘岛",
-  "cal_creationist": "创造论者",
-  "cal_gregorian_explanation": "太阳历，12 个月，365-366 天，由教皇格里高利十三世于 1582 年颁布。",
-  "cal_islamic_explanation": "阴历，12 个月，354-355 天，始于穆罕默德迁徙到麦地那（公元 622 年）。",
-  "cal_chinese_explanation": "阴阳历，结合了农历月份、太阳年和十二生肖周期。用于东亚传统节日。",
-  "cal_persian_explanation": "太阳历，365-366天，始于春分（诺鲁孜节）。",
-  "cal_balinese_explanation": "结合了多个同步周期的历法系统，其中包括一个210天的帕乌孔历。用于宗教仪式。",
-  "cal_hebrew_explanation": "阴阳历，12-13个月，始于创世之时（公元前3761年）。用于宗教仪式。",
-  "cal_ethiopian_explanation": "太阳历，13 个月（12 个月为 30 天，1 个月为 5-6 天），比公历晚 7-8 年。",
-  "cal_creationist_explanation": "按时间顺序排列，根据圣经家谱计算地球的年龄，认为创世发生在 6,000 至 10,000 年前。",
-  "cal_gregorian_usage": "使用率：95%（官方）——几乎每个国家都将其用作官方和经济用途的民用日历。",
-  "cal_islamic_usage": "使用情况：24%（宗教用途）——约有 20 亿穆斯林（约占世界人口的 24%）遵守，主要用于宗教节日（斋月、朝觐等）。",
-  "cal_chinese_usage": "使用率：18%（文化）——约有 14 亿中国人庆祝农历新年等节日。",
-  "cal_persian_usage": "使用率：1.5%（民用/文化）- 伊朗（约 8900 万）和阿富汗（约 4100 万）的官方日历。",
-  "cal_balinese_usage": "用途：1.5%（民用）- 埃塞俄比亚官方使用（约 1.26 亿），厄立特里亚使用。",
-  "cal_hebrew_usage": "使用情况：0.2%（宗教用途） - 犹太社区（约 1600 万人）出于宗教目的使用。",
-  "cal_ethiopian_usage": "使用率：<0.1%（文化）- 主要在巴厘岛（印度尼西亚）使用，约 450 万人口。",
-  "cal_creationist_usage": "使用率：<0.01%（小众）- 仅供少数基督教原教旨主义团体使用。",
   "tv_universe": "宇宙",
   "tv_life": "生活",
   "tv_dinosaurs": "恐龙",
@@ -312,7 +283,7 @@
   "tv_2020s_wikipedia": "2020s",
   "account_login": "登录",
   "account_email": "电子邮件",
-  "account_email_placeholder": "请输入您的邮箱",
+  "account_email_placeholder": "请输入您的电子邮件地址",
   "account_password": "密码",
   "account_password_placeholder": "请输入您的密码",
   "account_login_not_implemented": "登录功能尚未实现",
@@ -339,6 +310,35 @@
   "time_region_week_starts": "星期",
   "time_region_week_starts_monday": "周一",
   "time_region_week_starts_sunday": "星期日",
+  "cal_name": "日历：",
+  "cal_availability_yes": "可用的",
+  "cal_availability_no": "尚未准备就绪（我们需要帮助……请访问此处提交贡献网站）",
+  "cal_other": "日历",
+  "cal_usage": "用法：",
+  "cal_gregorian": "格里高利",
+  "cal_islamic": "伊斯兰（希吉拉）",
+  "cal_chinese": "中国人",
+  "cal_persian": "波斯语（太阳历）",
+  "cal_ethiopian": "埃塞俄比亚",
+  "cal_hebrew": "希伯来语",
+  "cal_balinese": "巴厘岛",
+  "cal_creationist": "创造论者",
+  "cal_gregorian_explanation": "太阳历，12 个月，365-366 天，由教皇格里高利十三世于 1582 年颁布。",
+  "cal_islamic_explanation": "阴历，12 个月，354-355 天，始于穆罕默德迁徙到麦地那（公元 622 年）。",
+  "cal_chinese_explanation": "阴阳历，结合了农历月份、太阳年和十二生肖周期。用于东亚传统节日。",
+  "cal_persian_explanation": "太阳历，365-366天，始于春分（诺鲁孜节）。",
+  "cal_balinese_explanation": "结合了多个同步周期的历法系统，其中包括一个210天的帕乌孔历。用于宗教仪式。",
+  "cal_hebrew_explanation": "阴阳历，12-13个月，始于创世之时（公元前3761年）。用于宗教仪式。",
+  "cal_ethiopian_explanation": "太阳历，13 个月（12 个月为 30 天，1 个月为 5-6 天），比公历晚 7-8 年。",
+  "cal_creationist_explanation": "按时间顺序排列，根据圣经家谱计算地球的年龄，认为创世发生在 6,000 至 10,000 年前。",
+  "cal_gregorian_usage": "使用率：95%（官方）——几乎每个国家都将其用作官方和经济用途的民用日历。",
+  "cal_islamic_usage": "使用情况：24%（宗教用途）——约有 20 亿穆斯林（约占世界人口的 24%）遵守，主要用于宗教节日（斋月、朝觐等）。",
+  "cal_chinese_usage": "使用率：18%（文化）——约有 14 亿中国人庆祝农历新年等节日。",
+  "cal_persian_usage": "使用率：1.5%（民用/文化）- 伊朗（约 8900 万）和阿富汗（约 4100 万）的官方日历。",
+  "cal_balinese_usage": "用途：1.5%（民用）- 埃塞俄比亚官方使用（约 1.26 亿），厄立特里亚使用。",
+  "cal_hebrew_usage": "使用情况：0.2%（宗教用途） - 犹太社区（约 1600 万人）出于宗教目的使用。",
+  "cal_ethiopian_usage": "使用率：<0.1%（文化）- 主要在巴厘岛（印度尼西亚）使用，约 450 万人口。",
+  "cal_creationist_usage": "使用率：<0.01%（小众）- 仅供少数基督教原教旨主义团体使用。",
   "settings_source_academy": "学院",
   "settings_parameters": "参数",
   "controls_mouse": "老鼠",
@@ -346,22 +346,21 @@
   "controls_mouse_drag_pan": "泛时间线",
   "controls_mouse_wheel": "车轮",
   "controls_mouse_wheel_zoom_at_cursor": "光标处放大",
-  "controls_mouse_pan_sensitivity": "泛敏感性",
   "controls_mouse_enable_inertia": "阻力后的动量",
   "controls_keyboard": "键盘",
-  "controls_keyboard_pan_left_right": "向左/向右平移",
+  "controls_keyboard_pan_left_right": "平底锅",
   "controls_keyboard_key_shift": "转移",
-  "controls_keyboard_fast_pan": "快速平移（5倍）",
-  "controls_keyboard_zoom_in_out": "放大/缩小",
+  "controls_keyboard_fast_pan": "快速翻页",
+  "controls_keyboard_zoom_in_out": "飞涨",
   "controls_keyboard_key_home": "家",
-  "controls_keyboard_jump_to_present": "跳转至当前时间",
+  "controls_keyboard_jump_to_present": "跳转至现在",
   "controls_keyboard_reset_zoom": "重置缩放",
-  "controls_keyboard_invert_arrows": "反转方向键",
+  "controls_keyboard_invert_arrows": "翻转平底锅",
   "controls_touch": "触碰",
   "controls_touch_drag": "拖",
   "controls_touch_drag_pan": "平底锅",
   "controls_touch_pinch": "捏",
   "controls_touch_pinch_zoom": "放大/缩小",
-  "controls_touch_zoom_sensitivity": "捏合灵敏度",
+  "controls_touch_zoom_sensitivity": "捏",
   "controls_touch_enable_pinch_zoom": "启用捏合缩放功能"
 }
