--- a/Jsons/language/de.json
+++ b/Jsons/language/de.json
@@ -83,35 +83,6 @@
   "source_wikipedia": "Wikipedia",
   "source_grokipedia": "Grokipedia",
   "source_worldhistory": "Weltgeschichte",
-  "cal_name": "Kalender:",
-  "cal_availability_yes": "Verfügbar",
-  "cal_availability_no": "Noch nicht fertig (wir brauchen Hilfe... Beitrags-Website hier)",
-  "cal_other": "Kalender",
-  "cal_usage": "Verwendung:",
-  "cal_gregorian": "Gregorian",
-  "cal_islamic": "Islamisch (Hijri)",
-  "cal_chinese": "chinesisch",
-  "cal_persian": "Persisch (Solar Hijri)",
-  "cal_ethiopian": "äthiopisch",
-  "cal_hebrew": "hebräisch",
-  "cal_balinese": "Balinesen",
-  "cal_creationist": "Kreationist",
-  "cal_gregorian_explanation": "Sonnenkalender, 12 Monate, 365-366 Tage, eingeführt von Papst Gregor XIII. im Jahr 1582.",
-  "cal_islamic_explanation": "Der Mondkalender, 12 Monate, 354-355 Tage, beginnt mit der Auswanderung Mohammeds nach Medina (622 n. Chr.).",
-  "cal_chinese_explanation": "Der Lunisolarkalender kombiniert Mondmonate, Sonnenjahr und den 12-jährigen Tierkreiszyklus. Er wird für traditionelle ostasiatische Feste verwendet.",
-  "cal_persian_explanation": "Der Sonnenkalender, 365-366 Tage, beginnt mit der Frühlingstagundnachtgleiche (Nowruz).",
-  "cal_balinese_explanation": "Kalendersystem mit mehreren simultanen Zyklen, darunter ein 210-tägiger Pawukon-Kalender. Wird für religiöse Zeremonien verwendet.",
-  "cal_hebrew_explanation": "Lunisolarkalender, 12-13 Monate, beginnt mit der Schöpfung (3761 v. Chr.). Wird für religiöse Feierlichkeiten verwendet.",
-  "cal_ethiopian_explanation": "Sonnenkalender, 13 Monate (12 Monate mit 30 Tagen und 1 Monat mit 5-6 Tagen), 7-8 Jahre hinter dem Gregorianischen Kalender.",
-  "cal_creationist_explanation": "Chronologischer Rahmen, berechnet das Alter der Erde anhand biblischer Genealogien und datiert die Schöpfung auf vor 6.000 bis 10.000 Jahren.",
-  "cal_gregorian_usage": "Verwendung: 95% (offiziell) - Wird in fast allen Ländern als bürgerlicher Kalender für offizielle und wirtschaftliche Zwecke verwendet.",
-  "cal_islamic_usage": "Verwendung: 24 % (religiös) - Wird von ca. 2 Milliarden Muslimen (ca. 24 % der Weltbevölkerung) begangen, hauptsächlich an religiösen Feiertagen (Ramadan, Hajj usw.).",
-  "cal_chinese_usage": "Nutzung: 18 % (kulturell) - Wird von etwa 1,4 Milliarden Chinesen bei Festen wie dem chinesischen Neujahr begangen.",
-  "cal_persian_usage": "Nutzung: 1,5 % (zivil/kulturell) - Offizieller Kalender im Iran (~89 Mio.) und in Afghanistan (~41 Mio.).",
-  "cal_balinese_usage": "Verwendung: 1,5 % (zivil) - Offiziell in Äthiopien (~126 Mio.) und in Eritrea verwendet.",
-  "cal_hebrew_usage": "Verwendung: 0,2 % (religiös) - Wird von jüdischen Gemeinden (~16 Mio. Menschen) für religiöse Zwecke verwendet.",
-  "cal_ethiopian_usage": "Verwendung: <0,1 % (kulturell) - Hauptsächlich verwendet auf Bali (Indonesien), ca. 4,5 Mio. Einwohner.",
-  "cal_creationist_usage": "Verwendung: <0,01% (Nischennutzung) - Wird von einigen fundamentalistischen christlichen Gemeinschaften genutzt.",
   "tv_universe": "Universum",
   "tv_life": "Leben",
   "tv_dinosaurs": "Dinosaurier",
@@ -339,6 +310,35 @@
   "time_region_week_starts": "Woche",
   "time_region_week_starts_monday": "Montag",
   "time_region_week_starts_sunday": "Sonntag",
+  "cal_name": "Kalender:",
+  "cal_availability_yes": "Verfügbar",
+  "cal_availability_no": "Noch nicht fertig (wir brauchen Hilfe... Beitrags-Website hier)",
+  "cal_other": "Kalender",
+  "cal_usage": "Verwendung:",
+  "cal_gregorian": "Gregorian",
+  "cal_islamic": "Islamisch (Hijri)",
+  "cal_chinese": "chinesisch",
+  "cal_persian": "Persisch (Solar Hijri)",
+  "cal_ethiopian": "äthiopisch",
+  "cal_hebrew": "hebräisch",
+  "cal_balinese": "Balinesen",
+  "cal_creationist": "Kreationist",
+  "cal_gregorian_explanation": "Sonnenkalender, 12 Monate, 365-366 Tage, eingeführt von Papst Gregor XIII. im Jahr 1582.",
+  "cal_islamic_explanation": "Der Mondkalender, 12 Monate, 354-355 Tage, beginnt mit der Auswanderung Mohammeds nach Medina (622 n. Chr.).",
+  "cal_chinese_explanation": "Der Lunisolarkalender kombiniert Mondmonate, Sonnenjahr und den 12-jährigen Tierkreiszyklus. Er wird für traditionelle ostasiatische Feste verwendet.",
+  "cal_persian_explanation": "Der Sonnenkalender, 365-366 Tage, beginnt mit der Frühlingstagundnachtgleiche (Nowruz).",
+  "cal_balinese_explanation": "Kalendersystem mit mehreren simultanen Zyklen, darunter ein 210-tägiger Pawukon-Kalender. Wird für religiöse Zeremonien verwendet.",
+  "cal_hebrew_explanation": "Lunisolarkalender, 12-13 Monate, beginnt mit der Schöpfung (3761 v. Chr.). Wird für religiöse Feierlichkeiten verwendet.",
+  "cal_ethiopian_explanation": "Sonnenkalender, 13 Monate (12 Monate mit 30 Tagen und 1 Monat mit 5-6 Tagen), 7-8 Jahre hinter dem Gregorianischen Kalender.",
+  "cal_creationist_explanation": "Chronologischer Rahmen, berechnet das Alter der Erde anhand biblischer Genealogien und datiert die Schöpfung auf vor 6.000 bis 10.000 Jahren.",
+  "cal_gregorian_usage": "Verwendung: 95% (offiziell) - Wird in fast allen Ländern als bürgerlicher Kalender für offizielle und wirtschaftliche Zwecke verwendet.",
+  "cal_islamic_usage": "Verwendung: 24 % (religiös) - Wird von ca. 2 Milliarden Muslimen (ca. 24 % der Weltbevölkerung) begangen, hauptsächlich an religiösen Feiertagen (Ramadan, Hajj usw.).",
+  "cal_chinese_usage": "Nutzung: 18 % (kulturell) - Wird von etwa 1,4 Milliarden Chinesen bei Festen wie dem chinesischen Neujahr begangen.",
+  "cal_persian_usage": "Nutzung: 1,5 % (zivil/kulturell) - Offizieller Kalender im Iran (~89 Mio.) und in Afghanistan (~41 Mio.).",
+  "cal_balinese_usage": "Verwendung: 1,5 % (zivil) - Offiziell in Äthiopien (~126 Mio.) und in Eritrea verwendet.",
+  "cal_hebrew_usage": "Verwendung: 0,2 % (religiös) - Wird von jüdischen Gemeinden (~16 Mio. Menschen) für religiöse Zwecke verwendet.",
+  "cal_ethiopian_usage": "Verwendung: <0,1 % (kulturell) - Hauptsächlich verwendet auf Bali (Indonesien), ca. 4,5 Mio. Einwohner.",
+  "cal_creationist_usage": "Verwendung: <0,01% (Nischennutzung) - Wird von einigen fundamentalistischen christlichen Gemeinschaften genutzt.",
   "settings_source_academy": "Akademie",
   "settings_parameters": "Parameter",
   "controls_mouse": "Maus",
@@ -346,22 +346,21 @@
   "controls_mouse_drag_pan": "Pan-Zeitleiste",
   "controls_mouse_wheel": "Rad",
   "controls_mouse_wheel_zoom_at_cursor": "Zoomen Sie am Cursor",
-  "controls_mouse_pan_sensitivity": "Pan-Empfindlichkeit",
   "controls_mouse_enable_inertia": "Impuls nach dem Bremsvorgang",
   "controls_keyboard": "Tastatur",
-  "controls_keyboard_pan_left_right": "Schwenken Sie nach links/rechts",
+  "controls_keyboard_pan_left_right": "Pfanne",
   "controls_keyboard_key_shift": "Schicht",
-  "controls_keyboard_fast_pan": "Schnellpfanne (5x)",
-  "controls_keyboard_zoom_in_out": "Vergrößern/Verkleinern",
+  "controls_keyboard_fast_pan": "Schnellpfanne",
+  "controls_keyboard_zoom_in_out": "Zoom",
   "controls_keyboard_key_home": "Heim",
-  "controls_keyboard_jump_to_present": "Zur Gegenwart springen",
+  "controls_keyboard_jump_to_present": "Jetzt",
   "controls_keyboard_reset_zoom": "Zoom zurücksetzen",
-  "controls_keyboard_invert_arrows": "Pfeiltasten umkehren",
+  "controls_keyboard_invert_arrows": "Pfanne umdrehen",
   "controls_touch": "Berühren",
   "controls_touch_drag": "Ziehen",
   "controls_touch_drag_pan": "Pfanne",
   "controls_touch_pinch": "Prise",
   "controls_touch_pinch_zoom": "Vergrößern/Verkleinern",
-  "controls_touch_zoom_sensitivity": "Kneifempfindlichkeit",
+  "controls_touch_zoom_sensitivity": "Prise",
   "controls_touch_enable_pinch_zoom": "Pinch-to-Zoom aktivieren"
 }
