--- a/Jsons/language/en.json
+++ b/Jsons/language/en.json
@@ -83,35 +83,6 @@
   "source_wikipedia": "Wikipedia",
   "source_grokipedia": "Grokipedia",
   "source_worldhistory": "World History",
-  "cal_name": "Calendar:",
-  "cal_availability_yes": "Available",
-  "cal_availability_no": "Not ready yet (we need help... contribution-website-here)",
-  "cal_other": "Calendars",
-  "cal_usage": "Usage:",
-  "cal_gregorian": "Gregorian",
-  "cal_islamic": "Islamic (Hijri)",
-  "cal_chinese": "Chinese",
-  "cal_persian": "Persian (Solar Hijri)",
-  "cal_ethiopian": "Ethiopian",
-  "cal_hebrew": "Hebrew",
-  "cal_balinese": "Balinese",
-  "cal_creationist": "Creationist",
-  "cal_gregorian_explanation": "Solar calendar, 12 months, 365-366 days, introduced by Pope Gregory XIII in 1582.",
-  "cal_islamic_explanation": "Lunar calendar, 12 months, 354-355 days, begins with Muhammad's migration to Medina (622 CE).",
-  "cal_chinese_explanation": "Lunisolar calendar, combines lunar months, solar year, 12-year zodiac animal cycle. Used for traditional East Asian festivals.",
-  "cal_persian_explanation": "Solar calendar, 365-366 days, begins at the spring equinox (Nowruz).",
-  "cal_balinese_explanation": "Calendar system combining simultaneous cycles, including a 210-day Pawukon calendar. Used for religious ceremonies.",
-  "cal_hebrew_explanation": "Lunisolar calendar, 12-13 months, starts from creation (3761 BCE). Used for religious observances.",
-  "cal_ethiopian_explanation": "Solar calendar, 13 months (12 of 30 days and 1 of 5-6 days), 7-8 years behind the Gregorian calendar.",
-  "cal_creationist_explanation": "Chronological framework, calculates Earth's age from biblical genealogies, placing creation 6,000-10,000 years ago.",
-  "cal_gregorian_usage": "Usage: 95% (official) - Used as the civil calendar in nearly every country for official and economic purposes.",
-  "cal_islamic_usage": "Usage: 24% (religious) - Observed  by ~2 billion Muslims (~24% of the world), mainly for religious holidays (Ramadan, Hajj, etc.).",
-  "cal_chinese_usage": "Usage: 18% (cultural) - Observed by ~1.4 billion Chinese people for festivals like Lunar New Year.",
-  "cal_persian_usage": "Usage: 1.5% (civil/cultural) - Official calendar in Iran (~89M) and Afghanistan (~41M).",
-  "cal_balinese_usage": "Usage: 1.5% (civil) - Official in Ethiopia (~126M) and used in Eritrea.",
-  "cal_hebrew_usage": "Usage: 0.2% (religious) - Used by Jewish communities (~16M people) for religious purposes.",
-  "cal_ethiopian_usage": "Usage: <0.1% (cultural) - Primarily used in Bali (Indonesia), ~4.5M people.",
-  "cal_creationist_usage": "Usage: <0.01% (niche) - Used by a few fundamentalist Christian communities.",
   "tv_universe": "Universe",
   "tv_life": "Life",
   "tv_dinosaurs": "Dinosaurs",
@@ -339,6 +310,35 @@
   "time_region_week_starts": "Week",
   "time_region_week_starts_monday": "Monday",
   "time_region_week_starts_sunday": "Sunday",
+  "cal_name": "Calendar:",
+  "cal_availability_yes": "Available",
+  "cal_availability_no": "Not ready yet (we need help... contribution-website-here)",
+  "cal_other": "Calendars",
+  "cal_usage": "Usage:",
+  "cal_gregorian": "Gregorian",
+  "cal_islamic": "Islamic (Hijri)",
+  "cal_chinese": "Chinese",
+  "cal_persian": "Persian (Solar Hijri)",
+  "cal_ethiopian": "Ethiopian",
+  "cal_hebrew": "Hebrew",
+  "cal_balinese": "Balinese",
+  "cal_creationist": "Creationist",
+  "cal_gregorian_explanation": "Solar calendar, 12 months, 365-366 days, introduced by Pope Gregory XIII in 1582.",
+  "cal_islamic_explanation": "Lunar calendar, 12 months, 354-355 days, begins with Muhammad's migration to Medina (622 CE).",
+  "cal_chinese_explanation": "Lunisolar calendar, combines lunar months, solar year, 12-year zodiac animal cycle. Used for traditional East Asian festivals.",
+  "cal_persian_explanation": "Solar calendar, 365-366 days, begins at the spring equinox (Nowruz).",
+  "cal_balinese_explanation": "Calendar system combining simultaneous cycles, including a 210-day Pawukon calendar. Used for religious ceremonies.",
+  "cal_hebrew_explanation": "Lunisolar calendar, 12-13 months, starts from creation (3761 BCE). Used for religious observances.",
+  "cal_ethiopian_explanation": "Solar calendar, 13 months (12 of 30 days and 1 of 5-6 days), 7-8 years behind the Gregorian calendar.",
+  "cal_creationist_explanation": "Chronological framework, calculates Earth's age from biblical genealogies, placing creation 6,000-10,000 years ago.",
+  "cal_gregorian_usage": "Usage: 95% (official) - Used as the civil calendar in nearly every country for official and economic purposes.",
+  "cal_islamic_usage": "Usage: 24% (religious) - Observed  by ~2 billion Muslims (~24% of the world), mainly for religious holidays (Ramadan, Hajj, etc.).",
+  "cal_chinese_usage": "Usage: 18% (cultural) - Observed by ~1.4 billion Chinese people for festivals like Lunar New Year.",
+  "cal_persian_usage": "Usage: 1.5% (civil/cultural) - Official calendar in Iran (~89M) and Afghanistan (~41M).",
+  "cal_balinese_usage": "Usage: 1.5% (civil) - Official in Ethiopia (~126M) and used in Eritrea.",
+  "cal_hebrew_usage": "Usage: 0.2% (religious) - Used by Jewish communities (~16M people) for religious purposes.",
+  "cal_ethiopian_usage": "Usage: <0.1% (cultural) - Primarily used in Bali (Indonesia), ~4.5M people.",
+  "cal_creationist_usage": "Usage: <0.01% (niche) - Used by a few fundamentalist Christian communities.",
   "settings_source_academy": "Academy",
   "settings_parameters": "Parameters",
   "controls_mouse": "Mouse",
@@ -346,22 +346,21 @@
   "controls_mouse_drag_pan": "Pan timeline",
   "controls_mouse_wheel": "Wheel",
   "controls_mouse_wheel_zoom_at_cursor": "Zoom at cursor",
-  "controls_mouse_pan_sensitivity": "Pan sensitivity",
   "controls_mouse_enable_inertia": "Momentum after drag",
   "controls_keyboard": "Keyboard",
-  "controls_keyboard_pan_left_right": "Pan left/right",
+  "controls_keyboard_pan_left_right": "Pan",
   "controls_keyboard_key_shift": "Shift",
-  "controls_keyboard_fast_pan": "Fast pan (5x)",
-  "controls_keyboard_zoom_in_out": "Zoom in/out",
+  "controls_keyboard_fast_pan": "Fast pan",
+  "controls_keyboard_zoom_in_out": "Zoom",
   "controls_keyboard_key_home": "Home",
-  "controls_keyboard_jump_to_present": "Jump to present",
+  "controls_keyboard_jump_to_present": "Jump to now",
   "controls_keyboard_reset_zoom": "Reset zoom",
-  "controls_keyboard_invert_arrows": "Invert arrow keys",
+  "controls_keyboard_invert_arrows": "Invert pan",
   "controls_touch": "Touch",
   "controls_touch_drag": "Drag",
   "controls_touch_drag_pan": "Pan",
   "controls_touch_pinch": "Pinch",
   "controls_touch_pinch_zoom": "Zoom in/out",
-  "controls_touch_zoom_sensitivity": "Pinch sensitivity",
+  "controls_touch_zoom_sensitivity": "Pinch",
   "controls_touch_enable_pinch_zoom": "Enable pinch to zoom"
 }
