--- a/Jsons/language/nl.json
+++ b/Jsons/language/nl.json
@@ -83,35 +83,6 @@
   "source_wikipedia": "Wikipedia",
   "source_grokipedia": "Grokipedia",
   "source_worldhistory": "Wereldgeschiedenis",
-  "cal_name": "Kalender:",
-  "cal_availability_yes": "Beschikbaar",
-  "cal_availability_no": "Nog niet klaar (we hebben hulp nodig... bijdrage-website-hier)",
-  "cal_other": "Kalenders",
-  "cal_usage": "Gebruik:",
-  "cal_gregorian": "Gregoriaans",
-  "cal_islamic": "Islamitisch (Hijri)",
-  "cal_chinese": "Chinese",
-  "cal_persian": "Perzisch (Zonnekalender Hijri)",
-  "cal_ethiopian": "Ethiopisch",
-  "cal_hebrew": "Hebreeuws",
-  "cal_balinese": "Balinees",
-  "cal_creationist": "Creationist",
-  "cal_gregorian_explanation": "De zonnekalender, met 12 maanden en 365-366 dagen, werd in 1582 ingevoerd door paus Gregorius XIII.",
-  "cal_islamic_explanation": "De maankalender, met 12 maanden en 354-355 dagen, begint met de migratie van Mohammed naar Medina (622 n.Chr.).",
-  "cal_chinese_explanation": "De lunisolaire kalender combineert de maanmaanden, het zonnejaar en de 12-jarige cyclus van de dierenriem. Deze kalender wordt gebruikt voor traditionele Oost-Aziatische festivals.",
-  "cal_persian_explanation": "De zonnekalender, die 365-366 dagen duurt, begint bij de lente-equinox (Nowruz).",
-  "cal_balinese_explanation": "Een kalendersysteem dat gelijktijdige cycli combineert, waaronder een Pawukon-kalender van 210 dagen. Gebruikt voor religieuze ceremonies.",
-  "cal_hebrew_explanation": "De lunisolaire kalender, met 12-13 maanden, begint bij de schepping (3761 v.Chr.). Deze wordt gebruikt voor religieuze plechtigheden.",
-  "cal_ethiopian_explanation": "De zonnekalender telt 13 maanden (12 van 30 dagen en 1 van 5-6 dagen) en loopt 7-8 jaar achter op de Gregoriaanse kalender.",
-  "cal_creationist_explanation": "Het chronologische kader berekent de leeftijd van de aarde aan de hand van bijbelse geslachtsregisters en plaatst de schepping 6.000 tot 10.000 jaar geleden.",
-  "cal_gregorian_usage": "Gebruik: 95% (officieel) - Wordt in bijna elk land gebruikt als burgerlijke kalender voor officiële en economische doeleinden.",
-  "cal_islamic_usage": "Gebruik: 24% (religieus) - Wordt nageleefd door ongeveer 2 miljard moslims (ongeveer 24% van de wereldbevolking), voornamelijk tijdens religieuze feestdagen (Ramadan, Hajj, enz.).",
-  "cal_chinese_usage": "Gebruik: 18% (cultureel) - Wordt door ongeveer 1,4 miljard Chinezen in acht genomen tijdens festivals zoals Chinees Nieuwjaar.",
-  "cal_persian_usage": "Gebruik: 1,5% (burgerlijk/cultureel) - Officiële kalender in Iran (~89 miljoen) en Afghanistan (~41 miljoen).",
-  "cal_balinese_usage": "Gebruik: 1,5% (civiel) - Officieel in Ethiopië (~126 miljoen) en gebruikt in Eritrea.",
-  "cal_hebrew_usage": "Gebruik: 0,2% (religieus) - Gebruikt door Joodse gemeenschappen (~16 miljoen mensen) voor religieuze doeleinden.",
-  "cal_ethiopian_usage": "Gebruik: <0,1% (cultureel) - Voornamelijk gebruikt op Bali (Indonesië), door ongeveer 4,5 miljoen mensen.",
-  "cal_creationist_usage": "Gebruik: <0,01% (niche) - Gebruikt door enkele fundamentalistische christelijke gemeenschappen.",
   "tv_universe": "Universum",
   "tv_life": "Leven",
   "tv_dinosaurs": "Dinosaurussen",
@@ -339,6 +310,35 @@
   "time_region_week_starts": "Week",
   "time_region_week_starts_monday": "Maandag",
   "time_region_week_starts_sunday": "Zondag",
+  "cal_name": "Kalender:",
+  "cal_availability_yes": "Beschikbaar",
+  "cal_availability_no": "Nog niet klaar (we hebben hulp nodig... bijdrage-website-hier)",
+  "cal_other": "Kalenders",
+  "cal_usage": "Gebruik:",
+  "cal_gregorian": "Gregoriaans",
+  "cal_islamic": "Islamitisch (Hijri)",
+  "cal_chinese": "Chinese",
+  "cal_persian": "Perzisch (Zonnekalender Hijri)",
+  "cal_ethiopian": "Ethiopisch",
+  "cal_hebrew": "Hebreeuws",
+  "cal_balinese": "Balinees",
+  "cal_creationist": "Creationist",
+  "cal_gregorian_explanation": "De zonnekalender, met 12 maanden en 365-366 dagen, werd in 1582 ingevoerd door paus Gregorius XIII.",
+  "cal_islamic_explanation": "De maankalender, met 12 maanden en 354-355 dagen, begint met de migratie van Mohammed naar Medina (622 n.Chr.).",
+  "cal_chinese_explanation": "De lunisolaire kalender combineert de maanmaanden, het zonnejaar en de 12-jarige cyclus van de dierenriem. Deze kalender wordt gebruikt voor traditionele Oost-Aziatische festivals.",
+  "cal_persian_explanation": "De zonnekalender, die 365-366 dagen duurt, begint bij de lente-equinox (Nowruz).",
+  "cal_balinese_explanation": "Een kalendersysteem dat gelijktijdige cycli combineert, waaronder een Pawukon-kalender van 210 dagen. Gebruikt voor religieuze ceremonies.",
+  "cal_hebrew_explanation": "De lunisolaire kalender, met 12-13 maanden, begint bij de schepping (3761 v.Chr.). Deze wordt gebruikt voor religieuze plechtigheden.",
+  "cal_ethiopian_explanation": "De zonnekalender telt 13 maanden (12 van 30 dagen en 1 van 5-6 dagen) en loopt 7-8 jaar achter op de Gregoriaanse kalender.",
+  "cal_creationist_explanation": "Het chronologische kader berekent de leeftijd van de aarde aan de hand van bijbelse geslachtsregisters en plaatst de schepping 6.000 tot 10.000 jaar geleden.",
+  "cal_gregorian_usage": "Gebruik: 95% (officieel) - Wordt in bijna elk land gebruikt als burgerlijke kalender voor officiële en economische doeleinden.",
+  "cal_islamic_usage": "Gebruik: 24% (religieus) - Wordt nageleefd door ongeveer 2 miljard moslims (ongeveer 24% van de wereldbevolking), voornamelijk tijdens religieuze feestdagen (Ramadan, Hajj, enz.).",
+  "cal_chinese_usage": "Gebruik: 18% (cultureel) - Wordt door ongeveer 1,4 miljard Chinezen in acht genomen tijdens festivals zoals Chinees Nieuwjaar.",
+  "cal_persian_usage": "Gebruik: 1,5% (burgerlijk/cultureel) - Officiële kalender in Iran (~89 miljoen) en Afghanistan (~41 miljoen).",
+  "cal_balinese_usage": "Gebruik: 1,5% (civiel) - Officieel in Ethiopië (~126 miljoen) en gebruikt in Eritrea.",
+  "cal_hebrew_usage": "Gebruik: 0,2% (religieus) - Gebruikt door Joodse gemeenschappen (~16 miljoen mensen) voor religieuze doeleinden.",
+  "cal_ethiopian_usage": "Gebruik: <0,1% (cultureel) - Voornamelijk gebruikt op Bali (Indonesië), door ongeveer 4,5 miljoen mensen.",
+  "cal_creationist_usage": "Gebruik: <0,01% (niche) - Gebruikt door enkele fundamentalistische christelijke gemeenschappen.",
   "settings_source_academy": "Academie",
   "settings_parameters": "Parameters",
   "controls_mouse": "Muis",
@@ -346,22 +346,21 @@
   "controls_mouse_drag_pan": "Pan-tijdlijn",
   "controls_mouse_wheel": "Wiel",
   "controls_mouse_wheel_zoom_at_cursor": "Zoom in op de cursor",
-  "controls_mouse_pan_sensitivity": "Pan-gevoeligheid",
   "controls_mouse_enable_inertia": "Momentum na het slepen",
   "controls_keyboard": "Toetsenbord",
-  "controls_keyboard_pan_left_right": "Pan naar links/rechts",
+  "controls_keyboard_pan_left_right": "Pan",
   "controls_keyboard_key_shift": "Verschuiving",
-  "controls_keyboard_fast_pan": "Snel pannen (5x)",
-  "controls_keyboard_zoom_in_out": "In-/uitzoomen",
+  "controls_keyboard_fast_pan": "Snel pannen",
+  "controls_keyboard_zoom_in_out": "Zoom",
   "controls_keyboard_key_home": "Thuis",
-  "controls_keyboard_jump_to_present": "Spring naar het heden",
+  "controls_keyboard_jump_to_present": "Spring naar nu",
   "controls_keyboard_reset_zoom": "Zoom opnieuw instellen",
-  "controls_keyboard_invert_arrows": "Keer de pijltjestoetsen om",
+  "controls_keyboard_invert_arrows": "Keer de pan om",
   "controls_touch": "Aanraken",
   "controls_touch_drag": "Sleuren",
   "controls_touch_drag_pan": "Pan",
   "controls_touch_pinch": "Kneep",
   "controls_touch_pinch_zoom": "In-/uitzoomen",
-  "controls_touch_zoom_sensitivity": "Knijpgevoeligheid",
+  "controls_touch_zoom_sensitivity": "Kneep",
   "controls_touch_enable_pinch_zoom": "Schakel knijpzoomen in."
 }
