--- a/Jsons/language/sv.json
+++ b/Jsons/language/sv.json
@@ -72,7 +72,7 @@
   "source_wikipedia_label": "Wikipedia",
   "source_baidubaike": "Baidu Baike",
   "source_britannica": "Britannica",
-  "source_citizendium": "Citizenium",
+  "source_citizendium": "Citizendium",
   "source_encyclopedia.com": "Encyklopedi",
   "source_imdb": "Imdb",
   "source_internetarchive": "Internetarkivet",
@@ -83,35 +83,6 @@
   "source_wikipedia": "Wikipedia",
   "source_grokipedia": "Grokipedia",
   "source_worldhistory": "Världshistoria",
-  "cal_name": "Kalender:",
-  "cal_availability_yes": "Tillgänglig",
-  "cal_availability_no": "Inte klar än (vi behöver hjälp... bidragswebbplats-här)",
-  "cal_other": "Kalendrar",
-  "cal_usage": "Användande:",
-  "cal_gregorian": "Gregoriansk",
-  "cal_islamic": "Islamisk (Hijri)",
-  "cal_chinese": "kinesiska",
-  "cal_persian": "Persiska (solar hijri)",
-  "cal_ethiopian": "etiopisk",
-  "cal_hebrew": "Hebreiska",
-  "cal_balinese": "balinesisk",
-  "cal_creationist": "Kreationist",
-  "cal_gregorian_explanation": "Solkalender, 12 månader, 365-366 dagar, introducerad av påven Gregorius XIII år 1582.",
-  "cal_islamic_explanation": "Månkalendern, 12 månader, 354-355 dagar, börjar med Muhammeds migration till Medina (622 e.Kr.).",
-  "cal_chinese_explanation": "Lunisolarkalender, kombinerar månmånader, solår och 12-åriga zodiakcykel för djur. Används för traditionella östasiatiska festivaler.",
-  "cal_persian_explanation": "Solkalendern, 365-366 dagar, börjar vid vårdagjämningen (Nowruz).",
-  "cal_balinese_explanation": "Kalendersystem som kombinerar samtidiga cykler, inklusive en 210-dagars Pawukon-kalender. Används för religiösa ceremonier.",
-  "cal_hebrew_explanation": "Lunisolarkalendern, 12–13 månader, börjar vid skapelsen (3761 f.Kr.). Används för religiösa högtider.",
-  "cal_ethiopian_explanation": "Solkalender, 13 månader (12 med 30 dagar och 1 med 5-6 dagar), 7-8 år efter den gregorianska kalendern.",
-  "cal_creationist_explanation": "Kronologiskt ramverk, beräknar jordens ålder utifrån bibliska släktregister och placerar skapelsen för 6 000–10 000 år sedan.",
-  "cal_gregorian_usage": "Användning: 95 % (officiell) - Används som civil kalender i nästan alla länder för officiella och ekonomiska ändamål.",
-  "cal_islamic_usage": "Användning: 24 % (religiös) - Firas av ~2 miljarder muslimer (~24 % av världen), främst för religiösa högtider (Ramadan, Hajj, etc.).",
-  "cal_chinese_usage": "Användning: 18 % (kulturell) - Firas av ~1,4 miljarder kineser för festivaler som kinesiskt nyår.",
-  "cal_persian_usage": "Användning: 1,5 % (civil/kulturell) - Officiell kalender i Iran (~89 miljoner) och Afghanistan (~41 miljoner).",
-  "cal_balinese_usage": "Användning: 1,5 % (civil) - Tjänsteman i Etiopien (~126 miljoner) och använd i Eritrea.",
-  "cal_hebrew_usage": "Användning: 0,2 % (religiös) - Används av judiska samfund (~16 miljoner personer) för religiösa ändamål.",
-  "cal_ethiopian_usage": "Användning: <0,1 % (kulturell) - Används främst på Bali (Indonesien), ~4,5 miljoner människor.",
-  "cal_creationist_usage": "Användning: <0,01% (nisch) - Används av ett fåtal fundamentalistiska kristna samfund.",
   "tv_universe": "Universum",
   "tv_life": "Liv",
   "tv_dinosaurs": "Dinosaurier",
@@ -339,6 +310,35 @@
   "time_region_week_starts": "Vecka",
   "time_region_week_starts_monday": "måndag",
   "time_region_week_starts_sunday": "söndag",
+  "cal_name": "Kalender:",
+  "cal_availability_yes": "Tillgänglig",
+  "cal_availability_no": "Inte klar än (vi behöver hjälp... bidragswebbplats-här)",
+  "cal_other": "Kalendrar",
+  "cal_usage": "Användande:",
+  "cal_gregorian": "Gregoriansk",
+  "cal_islamic": "Islamisk (Hijri)",
+  "cal_chinese": "kinesiska",
+  "cal_persian": "Persiska (solar hijri)",
+  "cal_ethiopian": "etiopisk",
+  "cal_hebrew": "Hebreiska",
+  "cal_balinese": "balinesisk",
+  "cal_creationist": "Kreationist",
+  "cal_gregorian_explanation": "Solkalender, 12 månader, 365-366 dagar, introducerad av påven Gregorius XIII år 1582.",
+  "cal_islamic_explanation": "Månkalendern, 12 månader, 354-355 dagar, börjar med Muhammeds migration till Medina (622 e.Kr.).",
+  "cal_chinese_explanation": "Lunisolarkalender, kombinerar månmånader, solår och 12-åriga zodiakcykel för djur. Används för traditionella östasiatiska festivaler.",
+  "cal_persian_explanation": "Solkalendern, 365-366 dagar, börjar vid vårdagjämningen (Nowruz).",
+  "cal_balinese_explanation": "Kalendersystem som kombinerar samtidiga cykler, inklusive en 210-dagars Pawukon-kalender. Används för religiösa ceremonier.",
+  "cal_hebrew_explanation": "Lunisolarkalendern, 12–13 månader, börjar vid skapelsen (3761 f.Kr.). Används för religiösa högtider.",
+  "cal_ethiopian_explanation": "Solkalender, 13 månader (12 med 30 dagar och 1 med 5-6 dagar), 7-8 år efter den gregorianska kalendern.",
+  "cal_creationist_explanation": "Kronologiskt ramverk, beräknar jordens ålder utifrån bibliska släktregister och placerar skapelsen för 6 000–10 000 år sedan.",
+  "cal_gregorian_usage": "Användning: 95 % (officiell) - Används som civil kalender i nästan alla länder för officiella och ekonomiska ändamål.",
+  "cal_islamic_usage": "Användning: 24 % (religiös) - Firas av ~2 miljarder muslimer (~24 % av världen), främst för religiösa högtider (Ramadan, Hajj, etc.).",
+  "cal_chinese_usage": "Användning: 18 % (kulturell) - Firas av ~1,4 miljarder kineser för festivaler som kinesiskt nyår.",
+  "cal_persian_usage": "Användning: 1,5 % (civil/kulturell) - Officiell kalender i Iran (~89 miljoner) och Afghanistan (~41 miljoner).",
+  "cal_balinese_usage": "Användning: 1,5 % (civil) - Tjänsteman i Etiopien (~126 miljoner) och använd i Eritrea.",
+  "cal_hebrew_usage": "Användning: 0,2 % (religiös) - Används av judiska samfund (~16 miljoner personer) för religiösa ändamål.",
+  "cal_ethiopian_usage": "Användning: <0,1 % (kulturell) - Används främst på Bali (Indonesien), ~4,5 miljoner människor.",
+  "cal_creationist_usage": "Användning: <0,01% (nisch) - Används av ett fåtal fundamentalistiska kristna samfund.",
   "settings_source_academy": "Akademi",
   "settings_parameters": "Parametrar",
   "controls_mouse": "Mus",
@@ -346,22 +346,21 @@
   "controls_mouse_drag_pan": "Pan-tidslinje",
   "controls_mouse_wheel": "Hjul",
   "controls_mouse_wheel_zoom_at_cursor": "Zooma vid markören",
-  "controls_mouse_pan_sensitivity": "Pan-känslighet",
   "controls_mouse_enable_inertia": "Momentum efter motstånd",
   "controls_keyboard": "Tangentbord",
-  "controls_keyboard_pan_left_right": "Panorera vänster/höger",
+  "controls_keyboard_pan_left_right": "Panorera",
   "controls_keyboard_key_shift": "Flytta",
-  "controls_keyboard_fast_pan": "Snabb panorering (5x)",
-  "controls_keyboard_zoom_in_out": "Zooma in/ut",
+  "controls_keyboard_fast_pan": "Snabb panorering",
+  "controls_keyboard_zoom_in_out": "Zoom",
   "controls_keyboard_key_home": "Hem",
-  "controls_keyboard_jump_to_present": "Hoppa till present",
+  "controls_keyboard_jump_to_present": "Hoppa till nu",
   "controls_keyboard_reset_zoom": "Återställ zoom",
-  "controls_keyboard_invert_arrows": "Invertera piltangenter",
+  "controls_keyboard_invert_arrows": "Vänd pannan",
   "controls_touch": "Röra",
   "controls_touch_drag": "Dra",
   "controls_touch_drag_pan": "Panorera",
   "controls_touch_pinch": "Nypa",
   "controls_touch_pinch_zoom": "Zooma in/ut",
-  "controls_touch_zoom_sensitivity": "Nypkänslighet",
+  "controls_touch_zoom_sensitivity": "Nypa",
   "controls_touch_enable_pinch_zoom": "Aktivera nyp för att zooma"
 }
